--- a/transforms/ri/ocri/r70/gov.ri.code.title.06.html
+++ b/transforms/ri/ocri/r70/gov.ri.code.title.06.html
@@ -10,12 +10,12 @@
   <meta content="1504.84" name="CocoaVersion" />
   <link href="https://unicourt.github.io/cic-code-ga/transforms/ga/stylesheet/ga_code_stylesheet.css" rel="stylesheet" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
-  <meta content="Release 70 of the Official Code of Rhode Island Annotated released 2021.11.Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-23.This document is not subject to copyright and is in the public domain. " name="description" />
+  <meta content="Release 70 of the Official Code of Rhode Island Annotated released 2021.11.Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-24.This document is not subject to copyright and is in the public domain. " name="description" />
  </head>
  <body>
   <nav>
    <p class="transformation">
-    Release 70 of the Official Code of Rhode Island Annotated released 2021.11. Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-23. This document is not subject to copyright and is in the public domain.
+    Release 70 of the Official Code of Rhode Island Annotated released 2021.11. Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-24. This document is not subject to copyright and is in the public domain.
    </p>
    <h1 id="t06">
     <b>
@@ -2714,11 +2714,13 @@
       <p>
        P.L. 1985, ch. 475, § 2; P.L. 2004, ch. 595, art. 26, § 1.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t06c11.1s6-11.1-8-transferredsections">
        <b>
         Transferred Sections.
        </b>
-      </p>
+      </h4>
       <p>
        The former section (P.L. 1981, ch. 294, § 2), concerning severability, was redesignated as §
        <cite class="ocri">
@@ -8062,26 +8064,30 @@
      <h3 id="t06c15s6-15-1">
       6-15-1.  [Transferred.]
      </h3>
-     <p>
-      <b>
-       Transferred Sections.
-      </b>
-     </p>
-     <p>
-      This section (P.L. 1908, ch. 1596, §§ 1, 2; G.L. 1909, ch. 184, §§ 1, 2; G.L. 1923, ch. 210, §§ 1, 2; G.L. 1938, ch. 384, §§ 1, 2; G.L. 1956, §§
-      <cite class="ocri">
-       <a href="#t06c15s6-15-1" target="_self">
-        6-15-1
-       </a>
-      </cite>
-      ), concerning receipt of instalment payments, was transferred to §
-      <cite class="ocri">
-       <a href="gov.ri.code.title.11.html#t11c9.1s11-9.1-1" target="_blank">
-        11-9.1-1
-       </a>
-      </cite>
-      by P.L. 1969, ch. 43.
-     </p>
+     <div>
+      <h4 id="t06c15s6-15-1-transferredsections">
+       <b>
+        Transferred Sections.
+       </b>
+      </h4>
+      <p>
+       This section (P.L. 1908, ch. 1596, §§ 1, 2; G.L. 1909, ch. 184, §§ 1, 2; G.L. 1923, ch. 210, §§ 1, 2; G.L. 1938, ch. 384, §§ 1, 2; G.L. 1956, §§
+       <cite class="ocri">
+        <a href="#t06c15s6-15-1" target="_self">
+         6-15-1
+        </a>
+       </cite>
+       ), concerning receipt of instalment payments, was transferred to §
+       <cite class="ocri">
+        <a href="gov.ri.code.title.11.html#t11c9.1s11-9.1-1" target="_blank">
+         11-9.1-1
+        </a>
+       </cite>
+       by P.L. 1969, ch. 43.
+      </p>
+     </div>
+    </div>
+    <div>
      <h3 id="t06c15s6-15-2">
       6-15-2.  Repealed.
      </h3>
@@ -8453,11 +8459,13 @@
        </cite>
        ), concerning fraudulent conveyances, was repealed by P.L. 1986, ch. 438, § 1, effective June 25, 1986. Section 2 of P.L. 1986, ch. 438 enacted the present chapter concerning the same subject matter.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t06c16s6-16-1-applicability">
        <b>
         Applicability.
        </b>
-      </p>
+      </h4>
       <p>
        P.L. 2018, ch. 141, § 4, provides: “This act shall take effect upon passage [July 2, 2018]; provided, that: (1) The amendments apply to a transfer made or obligation incurred on or after the effective date of this act; (2) The amendments do not apply to a transfer made or obligation incurred before the effective date of this act; (3) The amendments do not apply to a right of action that has accrued before the effective date of this act; and (4) For the foregoing purposes, a transfer is made and an obligation is incurred at the time provided in §
        <cite class="ocri">
@@ -10104,11 +10112,13 @@
        </cite>
        ), concerning notice to creditors of bulk sales and transfers and parties subject to chapter, were repealed by P.L. 1960, ch. 147, § 2.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t06c16s6-16-2-applicability">
        <b>
         Applicability.
        </b>
-      </p>
+      </h4>
       <p>
        P.L. 2018, ch. 141, § 4, provides: “This act shall take effect upon passage [July 2, 2018]; provided, that: (1) The amendments apply to a transfer made or obligation incurred on or after the effective date of this act; (2) The amendments do not apply to a transfer made or obligation incurred before the effective date of this act; (3) The amendments do not apply to a right of action that has accrued before the effective date of this act; and (4) For the foregoing purposes, a transfer is made and an obligation is incurred at the time provided in §
        <cite class="ocri">
@@ -10248,11 +10258,13 @@
       <p>
        P.L. 2018, ch. 141, § 2, and P.L. 2018, ch. 236, § 2 enacted identical amendments to this section.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t06c16s6-16-4-applicability">
        <b>
         Applicability.
        </b>
-      </p>
+      </h4>
       <p>
        P.L. 2018, ch. 141, § 4, provides: “This act shall take effect upon passage [July 2, 2018]; provided, that: (1) The amendments apply to a transfer made or obligation incurred on or after the effective date of this act; (2) The amendments do not apply to a transfer made or obligation incurred before the effective date of this act; (3) The amendments do not apply to a right of action that has accrued before the effective date of this act; and (4) For the foregoing purposes, a transfer is made and an obligation is incurred at the time provided in §
        <cite class="ocri">
@@ -10475,11 +10487,13 @@
       <p>
        P.L. 2014, ch. 528, § 71 provides that the amendment to this section by that act takes effect on December 31, 2014.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t06c16s6-16-5-applicability">
        <b>
         Applicability.
        </b>
-      </p>
+      </h4>
       <p>
        P.L. 2018, ch. 141, § 4, provides: “This act shall take effect upon passage [July 2, 2018]; provided, that: (1) The amendments apply to a transfer made or obligation incurred on or after the effective date of this act; (2) The amendments do not apply to a transfer made or obligation incurred before the effective date of this act; (3) The amendments do not apply to a right of action that has accrued before the effective date of this act; and (4) For the foregoing purposes, a transfer is made and an obligation is incurred at the time provided in §
        <cite class="ocri">
@@ -10715,11 +10729,13 @@
       <p>
        P.L. 2014, ch. 528, § 71 provides that the amendment to this section by that act takes effect on December 31, 2014.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t06c16s6-16-5.1-applicability">
        <b>
         Applicability.
        </b>
-      </p>
+      </h4>
       <p>
        P.L. 2018, ch. 141, § 4, provides: “This act shall take effect upon passage [July 2, 2018]; provided, that: (1) The amendments apply to a transfer made or obligation incurred on or after the effective date of this act; (2) The amendments do not apply to a transfer made or obligation incurred before the effective date of this act; (3) The amendments do not apply to a right of action that has accrued before the effective date of this act; and (4) For the foregoing purposes, a transfer is made and an obligation is incurred at the time provided in §
        <cite class="ocri">
@@ -10807,11 +10823,13 @@
       <p>
        P.L. 2014, ch. 528, § 71 provides that the amendment to this section by that act takes effect on December 31, 2014.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t06c16s6-16-6-applicability">
        <b>
         Applicability.
        </b>
-      </p>
+      </h4>
       <p>
        P.L. 2018, ch. 141, § 4, provides: “This act shall take effect upon passage [July 2, 2018]; provided, that: (1) The amendments apply to a transfer made or obligation incurred on or after the effective date of this act; (2) The amendments do not apply to a transfer made or obligation incurred before the effective date of this act; (3) The amendments do not apply to a right of action that has accrued before the effective date of this act; and (4) For the foregoing purposes, a transfer is made and an obligation is incurred at the time provided in §
        <cite class="ocri">
@@ -10910,11 +10928,13 @@
       <p>
        P.L. 2018, ch. 141, § 2, and P.L. 2018, ch. 236, § 2 enacted identical amendments to this section.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t06c16s6-16-7-applicability">
        <b>
         Applicability.
        </b>
-      </p>
+      </h4>
       <p>
        P.L. 2018, ch. 141, § 4, provides: “This act shall take effect upon passage [July 2, 2018]; provided, that: (1) The amendments apply to a transfer made or obligation incurred on or after the effective date of this act; (2) The amendments do not apply to a transfer made or obligation incurred before the effective date of this act; (3) The amendments do not apply to a right of action that has accrued before the effective date of this act; and (4) For the foregoing purposes, a transfer is made and an obligation is incurred at the time provided in §
        <cite class="ocri">
@@ -11165,11 +11185,13 @@
       <p>
        P.L. 2018, ch. 141, § 2, and P.L. 2018, ch. 236, § 2 enacted identical amendments to this section.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t06c16s6-16-8-applicability">
        <b>
         Applicability.
        </b>
-      </p>
+      </h4>
       <p>
        P.L. 2018, ch. 141, § 4, provides: “This act shall take effect upon passage [July 2, 2018]; provided, that: (1) The amendments apply to a transfer made or obligation incurred on or after the effective date of this act; (2) The amendments do not apply to a transfer made or obligation incurred before the effective date of this act; (3) The amendments do not apply to a right of action that has accrued before the effective date of this act; and (4) For the foregoing purposes, a transfer is made and an obligation is incurred at the time provided in §
        <cite class="ocri">
@@ -11361,11 +11383,13 @@
       <p>
        P.L. 2014, ch. 528, § 71 provides that the amendment to this section by that act takes effect on December 31, 2014.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t06c16s6-16-9-applicability">
        <b>
         Applicability.
        </b>
-      </p>
+      </h4>
       <p>
        P.L. 2018, ch. 141, § 4, provides: “This act shall take effect upon passage [July 2, 2018]; provided, that: (1) The amendments apply to a transfer made or obligation incurred on or after the effective date of this act; (2) The amendments do not apply to a transfer made or obligation incurred before the effective date of this act; (3) The amendments do not apply to a right of action that has accrued before the effective date of this act; and (4) For the foregoing purposes, a transfer is made and an obligation is incurred at the time provided in §
        <cite class="ocri">
@@ -11539,11 +11563,13 @@
       <p>
        P.L. 2018, ch. 141, § 2, and P.L. 2018, ch. 236, § 2 enacted identical amendments to this section.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t06c16s6-16-12-applicability">
        <b>
         Applicability.
        </b>
-      </p>
+      </h4>
       <p>
        P.L. 2018, ch. 141, § 4, provides: “This act shall take effect upon passage [July 2, 2018]; provided, that: (1) The amendments apply to a transfer made or obligation incurred on or after the effective date of this act; (2) The amendments do not apply to a transfer made or obligation incurred before the effective date of this act; (3) The amendments do not apply to a right of action that has accrued before the effective date of this act; and (4) For the foregoing purposes, a transfer is made and an obligation is incurred at the time provided in §
        <cite class="ocri">
@@ -11604,11 +11630,13 @@
       <p>
        P.L. 2018, ch. 141, § 3, and P.L. 2018, ch. 236, § 3 enacted identical versions of this section.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t06c16s6-16-13-applicability">
        <b>
         Applicability.
        </b>
-      </p>
+      </h4>
       <p>
        P.L. 2018, ch. 141, § 4, provides: “This act shall take effect upon passage [July 2, 2018]; provided, that: (1) The amendments apply to a transfer made or obligation incurred on or after the effective date of this act; (2) The amendments do not apply to a transfer made or obligation incurred before the effective date of this act; (3) The amendments do not apply to a right of action that has accrued before the effective date of this act; and (4) For the foregoing purposes, a transfer is made and an obligation is incurred at the time provided in §
        <cite class="ocri">
@@ -11677,11 +11705,13 @@
       <p>
        P.L. 2018, ch. 141, § 3, and P.L. 2018, ch. 236, § 3 enacted identical versions of this section.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t06c16s6-16-14-applicability">
        <b>
         Applicability.
        </b>
-      </p>
+      </h4>
       <p>
        P.L. 2018, ch. 141, § 4, provides: “This act shall take effect upon passage [July 2, 2018]; provided, that: (1) The amendments apply to a transfer made or obligation incurred on or after the effective date of this act; (2) The amendments do not apply to a transfer made or obligation incurred before the effective date of this act; (3) The amendments do not apply to a right of action that has accrued before the effective date of this act; and (4) For the foregoing purposes, a transfer is made and an obligation is incurred at the time provided in §
        <cite class="ocri">
@@ -11726,11 +11756,13 @@
       <p>
        P.L. 2018, ch. 141, § 3, and P.L. 2018, ch. 236, § 3 enacted identical versions of this section.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t06c16s6-16-15-applicability">
        <b>
         Applicability.
        </b>
-      </p>
+      </h4>
       <p>
        P.L. 2018, ch. 141, § 4, provides: “This act shall take effect upon passage [July 2, 2018]; provided, that: (1) The amendments apply to a transfer made or obligation incurred on or after the effective date of this act; (2) The amendments do not apply to a transfer made or obligation incurred before the effective date of this act; (3) The amendments do not apply to a right of action that has accrued before the effective date of this act; and (4) For the foregoing purposes, a transfer is made and an obligation is incurred at the time provided in §
        <cite class="ocri">
@@ -11775,11 +11807,13 @@
       <p>
        P.L. 2018, ch. 141, § 3, and P.L. 2018, ch. 236, § 3 enacted identical versions of this section.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t06c16s6-16-16-applicability">
        <b>
         Applicability.
        </b>
-      </p>
+      </h4>
       <p>
        P.L. 2018, ch. 141, § 4, provides: “This act shall take effect upon passage [July 2, 2018]; provided, that: (1) The amendments apply to a transfer made or obligation incurred on or after the effective date of this act; (2) The amendments do not apply to a transfer made or obligation incurred before the effective date of this act; (3) The amendments do not apply to a right of action that has accrued before the effective date of this act; and (4) For the foregoing purposes, a transfer is made and an obligation is incurred at the time provided in §
        <cite class="ocri">
@@ -11824,11 +11858,13 @@
       <p>
        P.L. 2018, ch. 141, § 3, and P.L. 2018, ch. 236, § 3 enacted identical versions of this section.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t06c16s6-16-17-applicability">
        <b>
         Applicability.
        </b>
-      </p>
+      </h4>
       <p>
        P.L. 2018, ch. 141, § 4, provides: “This act shall take effect upon passage [July 2, 2018]; provided, that: (1) The amendments apply to a transfer made or obligation incurred on or after the effective date of this act; (2) The amendments do not apply to a transfer made or obligation incurred before the effective date of this act; (3) The amendments do not apply to a right of action that has accrued before the effective date of this act; and (4) For the foregoing purposes, a transfer is made and an obligation is incurred at the time provided in §
        <cite class="ocri">
