--- a/transforms/ri/ocri/r70/gov.ri.code.title.07.html
+++ b/transforms/ri/ocri/r70/gov.ri.code.title.07.html
@@ -10,12 +10,12 @@
   <meta content="1504.84" name="CocoaVersion" />
   <link href="https://unicourt.github.io/cic-code-ga/transforms/ga/stylesheet/ga_code_stylesheet.css" rel="stylesheet" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
-  <meta content="Release 70 of the Official Code of Rhode Island Annotated released 2021.11.Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-23.This document is not subject to copyright and is in the public domain. " name="description" />
+  <meta content="Release 70 of the Official Code of Rhode Island Annotated released 2021.11.Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-24.This document is not subject to copyright and is in the public domain. " name="description" />
  </head>
  <body>
   <nav>
    <p class="transformation">
-    Release 70 of the Official Code of Rhode Island Annotated released 2021.11. Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-23. This document is not subject to copyright and is in the public domain.
+    Release 70 of the Official Code of Rhode Island Annotated released 2021.11. Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-24. This document is not subject to copyright and is in the public domain.
    </p>
    <h1 id="t07">
     <b>
@@ -10073,11 +10073,13 @@
         § 1, and P.L. 2021, ch. 138, § 1 enacted
         identical amendments to this section.
        </p>
-       <p>
+      </div>
+      <div>
+       <h4 id="t07c1.2p15s7-1.2-1501-delayedeffectivedates">
         <b>
          Delayed Effective Dates.
         </b>
-       </p>
+       </h4>
        <p>
         P.L. 2021, ch. 137, § 4, provides that the amendment to this section by that act takes effect on January 1, 2022.
        </p>
@@ -18395,11 +18397,13 @@
        § 2, and P.L. 2021, ch. 138, § 2 enacted
        identical amendments to this section.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t07c06s7-6-90-delayedeffectivedates">
        <b>
         Delayed Effective Dates.
        </b>
-      </p>
+      </h4>
       <p>
        P.L. 2021, ch. 137, § 4, provides that the amendment to this section by that act takes effect on January 1, 2022.
       </p>
@@ -18483,11 +18487,13 @@
        § 2, and P.L. 2021, ch. 138, § 2 enacted
        identical amendments to this section.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t07c06s7-6-91-delayedeffectivedates">
        <b>
         Delayed Effective Dates.
        </b>
-      </p>
+      </h4>
       <p>
        P.L. 2021, ch. 137, § 4, provides that the amendment to this section by that act takes effect on January 1, 2022.
       </p>
@@ -30193,11 +30199,13 @@
       <p>
        P.L. 1996, ch. 270, § 2; P.L. 1998, ch. 235, § 1; P.L. 1999, ch. 65, § 1; P.L. 1999, ch. 192, § 1; P.L. 2016, ch. 142, art. 13, § 3.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t07c12s7-12-56-applicability">
        <b>
         Applicability.
        </b>
-      </p>
+      </h4>
       <p>
        P.L. 1999, ch. 192, § 2, provides that the amendment to this section by that act shall apply to all new and existing registered limited-liability partnerships on file with the Secretary of State’s office at the time of passage [June 30, 1999].
       </p>
@@ -30436,11 +30444,13 @@
       <p>
        P.L. 2011, ch. 151, art. 19, § 1; P.L. 2016, ch. 142, art. 13, § 4.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t07c12s7-12-60-applicability">
        <b>
         Applicability.
        </b>
-      </p>
+      </h4>
       <p>
        P.L. 2016, ch. 142, art. 13, § 20, provides that the amendment to this section by that act takes effect upon passage [June 24, 2016] and shall apply to tax years beginning on or after January 1, 2016.
       </p>
@@ -33545,11 +33555,13 @@
       <p>
        P.L. 2011, ch. 151, art. 19, § 2; P.L. 2016, ch. 142, art. 13, § 5.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t07c13s7-13-69-applicability">
        <b>
         Applicability.
        </b>
-      </p>
+      </h4>
       <p>
        P.L. 2016, ch. 142, art. 13, § 20, provides that the amendment to this section by that act takes effect upon passage [June 24, 2016] and shall apply to tax years beginning on or after January 1, 2016.
       </p>
@@ -36306,11 +36318,13 @@
        § 3, and P.L. 2021, ch. 138, § 3 enacted
        identical amendments to this section.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t07c16s7-16-12-delayedeffectivedates">
        <b>
         Delayed Effective Dates.
        </b>
-      </p>
+      </h4>
       <p>
        P.L. 2021, ch. 137, § 4, provides that the amendment to this section by that act takes effect on January 1, 2022.
       </p>
@@ -38499,11 +38513,13 @@
        § 3, and P.L. 2021, ch. 138, § 3 enacted
        identical amendments to this section.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t07c16s7-16-66-delayedeffectivedates">
        <b>
         Delayed Effective Dates.
        </b>
-      </p>
+      </h4>
       <p>
        P.L. 2021, ch. 137, § 4, provides that the amendment to this section by that act takes effect on January 1, 2022.
       </p>
@@ -38612,11 +38628,13 @@
       <p>
        P.L. 1992, ch. 280, § 1; P.L. 2011, ch. 151, art. 19, § 3; P.L. 2016, ch. 142, art. 13, § 6.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t07c16s7-16-67-applicability">
        <b>
         Applicability.
        </b>
-      </p>
+      </h4>
       <p>
        P.L. 2016, ch. 142, art. 13, § 20, provides that the amendment to this section by that act takes effect upon passage [June 24, 2016] and shall apply to tax years beginning on or after January 1, 2016.
       </p>
