--- a/transforms/ri/ocri/r70/gov.ri.code.title.08.html
+++ b/transforms/ri/ocri/r70/gov.ri.code.title.08.html
@@ -10,12 +10,12 @@
   <meta content="1504.84" name="CocoaVersion" />
   <link href="https://unicourt.github.io/cic-code-ga/transforms/ga/stylesheet/ga_code_stylesheet.css" rel="stylesheet" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
-  <meta content="Release 70 of the Official Code of Rhode Island Annotated released 2021.11.Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-23.This document is not subject to copyright and is in the public domain. " name="description" />
+  <meta content="Release 70 of the Official Code of Rhode Island Annotated released 2021.11.Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-24.This document is not subject to copyright and is in the public domain. " name="description" />
  </head>
  <body>
   <nav>
    <p class="transformation">
-    Release 70 of the Official Code of Rhode Island Annotated released 2021.11. Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-23. This document is not subject to copyright and is in the public domain.
+    Release 70 of the Official Code of Rhode Island Annotated released 2021.11. Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-24. This document is not subject to copyright and is in the public domain.
    </p>
    <h1 id="t08">
     <b>
@@ -7449,11 +7449,13 @@
       <p>
        P.L. 2021, ch. 286, § 1, and P.L. 2021, ch. 287, § 1 enacted identical amendments to this section.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t08c02s8-2-39.3-contingenteffectivedates">
        <b>
         Contingent Effective Dates.
        </b>
-      </p>
+      </h4>
       <p>
        P.L. 2017, ch. 342, § 5, provides that this section takes effect upon issuance of applicable rules by the supreme court.
       </p>
@@ -26247,11 +26249,13 @@
       <p>
        P.L. 2014, ch. 251, § 1, and P.L. 2014, ch. 287, § 1 enacted identical amendments to this section.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t08c16.1s8-16.1-6-applicability">
        <b>
         Applicability.
        </b>
-      </p>
+      </h4>
       <p>
        P.L. 2013, ch. 178, § 2, provides that the amendment of this section by that act takes effect on July 11, 2013 and shall be applied retroactively to June 29, 2013. For purposes of providing clarity, the expressed legislative intent of this act is that any individual on a list of judicial candidates as of June 29, 2013, shall remain on that list until June 30, 2014, unless that individual is actually confirmed as a judge prior to June 30, 2014.
       </p>
