--- a/transforms/ri/ocri/r70/gov.ri.code.title.09.html
+++ b/transforms/ri/ocri/r70/gov.ri.code.title.09.html
@@ -10,12 +10,12 @@
   <meta content="1504.84" name="CocoaVersion" />
   <link href="https://unicourt.github.io/cic-code-ga/transforms/ga/stylesheet/ga_code_stylesheet.css" rel="stylesheet" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
-  <meta content="Release 70 of the Official Code of Rhode Island Annotated released 2021.11.Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-23.This document is not subject to copyright and is in the public domain. " name="description" />
+  <meta content="Release 70 of the Official Code of Rhode Island Annotated released 2021.11.Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-24.This document is not subject to copyright and is in the public domain. " name="description" />
  </head>
  <body>
   <nav>
    <p class="transformation">
-    Release 70 of the Official Code of Rhode Island Annotated released 2021.11. Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-23. This document is not subject to copyright and is in the public domain.
+    Release 70 of the Official Code of Rhode Island Annotated released 2021.11. Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-24. This document is not subject to copyright and is in the public domain.
    </p>
    <h1 id="t09">
     <b>
@@ -14489,11 +14489,13 @@
        P.L. 2021, ch. 387, § 1, and
        P.L. 2021, ch. 388, § 1 enacted identical amendments to this section.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t09c01s9-1-32-applicability">
        <b>
         Applicability.
        </b>
-      </p>
+      </h4>
       <p>
        P.L. 2021, ch. 387, § 2, provides that the amendment to this section by that act takes effect on passage [July 13, 2021] and “shall only apply to causes of action and claims arising after the effective date of this act.”
       </p>
@@ -23021,11 +23023,13 @@
       <p>
        P.L. 2015, ch. 275, § 41, provides that this section takes effect on September 1, 2015.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t09c05s9-5-10.1-applicability">
        <b>
         Applicability.
        </b>
-      </p>
+      </h4>
       <p>
        P.L. 2021, ch. 221, § 2 provides: “This act shall take effect upon passage [July 6, 2021] and any person certified as a constable on the effective date of this act shall continue to be certified without complying with the certification requirements prescribed by this act.”
       </p>
@@ -39932,11 +39936,13 @@
         Compiler’s Notes.
        </b>
       </h4>
-      <p>
+     </div>
+     <div>
+      <h4 id="t09c19s9-19-38-abridgedlifetablesandtablesofworklifeexpectancies">
        <b>
         Abridged Life Tables and Tables of Work Life Expectancies.
        </b>
-      </p>
+      </h4>
       <p>
        The United States Abridged Life Tables, as issued by the United States department of health and human services, centers for disease control, and the Tables of Working Life, as issued by the United States department of labor, bureau of labor statistics, are set out immediately following this section. The Abridged Life Tables are taken from a report dated December 24, 1998, and reflect the latest version of the abridged tables.
        A full Life Tables were published in a report dated December 13, 1999. The Tables of Working Life are taken from Bulletin 2254, dated February 1986, and represent the latest version of these tables.
@@ -41120,11 +41126,13 @@
       <p>
        P.L. 2019, ch. 185, § 1, and P.L. 2019, ch. 256, § 1 enacted identical amendments to this section.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t09c20s9-20-4-applicability">
        <b>
         Applicability.
        </b>
-      </p>
+      </h4>
       <p>
        P.L. 2019, ch. 185, § 2 provides: “This act shall take effect upon passage [July 15, 2019]; however, the ‘open and obvious’ amendment shall only apply to personal injuries or personal injuries that have resulted in death or injury to property that occur after the passage of the act.”
       </p>
@@ -44192,9 +44200,12 @@
         <cite class="ocri">
          3 R.I. 59
         </cite>
-        , 5
+        ,
         <cite class="ocri">
-         3 R.I. 59
+         5
+         <cite class="ocri">
+          3 R.I. 59
+         </cite>
         </cite>
         , 163 A. 751,
         <cite class="ocri">
@@ -67496,11 +67507,13 @@
       <p>
        The Official Comments in this chapter are copyrighted by the National Conference of Commissioners on Uniform State Laws, and are reproduced by permission.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t09c34s9-34-1-applicability">
        <b>
         Applicability.
        </b>
-      </p>
+      </h4>
       <p>
        P.L. 2021, ch, 134, §
        3, provides: “This act shall take effect upon passage [July 3, 2021] and shall apply to foreign and Canadian judgments obtained on or after the effective date of this act.”
@@ -68290,11 +68303,13 @@
       <p>
        The Official Comments in this chapter are copyrighted by the National Conference of Commissioners on Uniform State Laws, and are reproduced by permission.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t09c35s9-35-1-applicability">
        <b>
         Applicability.
        </b>
-      </p>
+      </h4>
       <p>
        P.L. 2021, ch. 134, § 3, provides: “This act shall take effect upon passage [July 3, 2021] and shall apply to foreign and Canadian judgments obtained on or after the effective date of this act.”
       </p>
