--- a/transforms/ri/ocri/r70/gov.ri.code.title.10.html
+++ b/transforms/ri/ocri/r70/gov.ri.code.title.10.html
@@ -10,12 +10,12 @@
   <meta content="1504.84" name="CocoaVersion" />
   <link href="https://unicourt.github.io/cic-code-ga/transforms/ga/stylesheet/ga_code_stylesheet.css" rel="stylesheet" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
-  <meta content="Release 70 of the Official Code of Rhode Island Annotated released 2021.11.Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-23.This document is not subject to copyright and is in the public domain. " name="description" />
+  <meta content="Release 70 of the Official Code of Rhode Island Annotated released 2021.11.Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-24.This document is not subject to copyright and is in the public domain. " name="description" />
  </head>
  <body>
   <nav>
    <p class="transformation">
-    Release 70 of the Official Code of Rhode Island Annotated released 2021.11. Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-23. This document is not subject to copyright and is in the public domain.
+    Release 70 of the Official Code of Rhode Island Annotated released 2021.11. Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-24. This document is not subject to copyright and is in the public domain.
    </p>
    <h1 id="t10">
     <b>
@@ -11023,11 +11023,13 @@
        P.L. 2021, ch. 410, § 1, and
        P.L. 2021, ch. 411, § 1 enacted identical amendments to this section.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t10c06s10-6-3-applicability">
        <b>
         Applicability.
        </b>
-      </p>
+      </h4>
       <p>
        P.L. 2021, ch. 410, § 3, provides that the amendment to this section by that act takes effect upon passage [July 14, 2021] and applies to “all claims pending at the time of passage or asserted thereafter; provided, however, that this act shall not apply to, affect or impair releases executed before the passage date.”
       </p>
@@ -11361,11 +11363,13 @@
        P.L. 2021, ch. 410, § 1, and
        P.L. 2021, ch. 411, § 1 enacted identical amendments to this section.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t10c06s10-6-4-applicability">
        <b>
         Applicability.
        </b>
-      </p>
+      </h4>
       <p>
        P.L. 2021, ch. 410, § 3, provides that the amendment to this section by that act takes effect upon passage [July 14, 2021] and applies to “all claims pending at the time of passage or asserted thereafter; provided, however, that this act shall not apply to, affect or impair releases executed before the passage date.”
       </p>
@@ -11631,11 +11635,13 @@
        P.L. 2021, ch. 410, § 1, and
        P.L. 2021, ch. 411, § 1 enacted identical amendments to this section.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t10c06s10-6-7-applicability">
        <b>
         Applicability.
        </b>
-      </p>
+      </h4>
       <p>
        P.L. 2006, ch. 213, § 3, provides that the amendment to this section by that act takes effect upon passage [July 3, 2006] and applies to all claims pending at the time of passage; provided, however, that the amendment does not apply to, affect or impair releases executed before that date of passage.
       </p>
@@ -12000,11 +12006,13 @@
        </cite>
        ; P.L. 2006, ch. 213, § 2; repealed by P.L. 2021, ch. 410, § 2, effective July 14, 2021; repealed by P.L. 2021, ch. 411, § 2, effective July 14, 2021.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t10c06s10-6-8-compilersnotes">
        <b>
         Compiler's Notes
        </b>
-      </p>
+      </h4>
       <p>
        Former §
        <cite class="ocri">
@@ -12195,11 +12203,13 @@
       <p>
        P.L. 2019, ch. 23, § 1, and P.L. 2019, § 24, § 1 enacted identical versions of this section.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t10c06s10-6-12-applicability">
        <b>
         Applicability.
        </b>
-      </p>
+      </h4>
       <p>
        P.L. 2019, ch. 23, § 2, provides: “This act shall take effect upon passage [June 13, 2019] and shall apply to all claims pending
        at the time of passage or asserted thereafter; provided, however, that this act shall not apply to, affect or impair releases executed before the passage date.”
@@ -13828,11 +13838,13 @@
        P.L. 2021, ch. 341, § 1, and
        P.L. 2021, ch. 342, § 1 enacted identical amendments to this section.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t10c07s10-7-1.2-applicability">
        <b>
         Applicability.
        </b>
-      </p>
+      </h4>
       <p>
        P.L. 2021, ch. 341, § 2, provides that the amendment to this section by that act takes effect upon passage [July 12, 2021] and applies only to all claims resulting from injuries occurring after the effective date.
       </p>
