--- a/transforms/ri/ocri/r70/gov.ri.code.title.14.html
+++ b/transforms/ri/ocri/r70/gov.ri.code.title.14.html
@@ -10,12 +10,12 @@
   <meta content="1504.84" name="CocoaVersion" />
   <link href="https://unicourt.github.io/cic-code-ga/transforms/ga/stylesheet/ga_code_stylesheet.css" rel="stylesheet" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
-  <meta content="Release 70 of the Official Code of Rhode Island Annotated released 2021.11.Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-23.This document is not subject to copyright and is in the public domain. " name="description" />
+  <meta content="Release 70 of the Official Code of Rhode Island Annotated released 2021.11.Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-24.This document is not subject to copyright and is in the public domain. " name="description" />
  </head>
  <body>
   <nav>
    <p class="transformation">
-    Release 70 of the Official Code of Rhode Island Annotated released 2021.11. Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-23. This document is not subject to copyright and is in the public domain.
+    Release 70 of the Official Code of Rhode Island Annotated released 2021.11. Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-24. This document is not subject to copyright and is in the public domain.
    </p>
    <h1 id="t14">
     <b>
@@ -3282,11 +3282,13 @@
        </cite>
        .
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t14c01s14-1-8-reenactments">
        <b>
         Reenactments.
        </b>
-      </p>
+      </h4>
       <p>
        The 2002 Reenactment rewrote the section heading.
       </p>
@@ -3752,11 +3754,13 @@
       <p>
        P.L. 1979, ch. 190, § 1; P.L. 1996, ch. 149, § 1; P.L. 1996, ch. 196, § 1; P.L. 2018, ch. 47, art. 15, § 1.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t14c01s14-1-11.1-reenactments">
        <b>
         Reenactments.
        </b>
-      </p>
+      </h4>
       <p>
        The 2002 Reenactment added the subsection designations.
       </p>
@@ -5302,11 +5306,13 @@
       <p>
        P.L. 1980, ch. 244, § 1; P.L. 1982, ch. 220, § 1; P.L. 1982, ch. 345, § 1; P.L. 1983, ch. 167, art. XXIV, § 1; P.L. 1989, ch. 185, § 1.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t14c01s14-1-32.1-reenactments">
        <b>
         Reenactments.
        </b>
-      </p>
+      </h4>
       <p>
        The 2002 Reenactment substituted “community restitution” for “community service” in subsection (b).
       </p>
@@ -5363,11 +5369,13 @@
       <p>
        P.L. 1980, ch. 244, § 1; P.L. 1983, ch. 167, art. XXIV, § 1.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t14c01s14-1-32.2-reenactments">
        <b>
         Reenactments.
        </b>
-      </p>
+      </h4>
       <p>
        The 2002 Reenactment substituted “community restitution” for “community service” twice.
       </p>
@@ -5403,11 +5411,13 @@
       <p>
        P.L. 1990, ch. 284, § 5.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t14c01s14-1-32.4-reenactments">
        <b>
         Reenactments.
        </b>
-      </p>
+      </h4>
       <p>
        The 2002 Reenactment rewrote the section heading.
       </p>
@@ -5558,11 +5568,13 @@
        </cite>
        ; Reorg. Plan No. 1, 1970; P.L. 1978, ch. 77, § 1; P.L. 1981, ch. 285, § 1; P.L. 1982, ch. 231, § 1; P.L. 1993, ch. 138, art. 43, § 1; P.L. 2000, ch. 107, § 1; P.L. 2001, ch. 77, art. 23, § 2; P.L. 2007, ch. 23, § 1; P.L. 2007, ch. 25, § 1; P.L. 2007, ch. 73, art. 22, § 1; P.L. 2016, ch. 147, § 1; P.L. 2016, ch. 154, § 1.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t14c01s14-1-34-reenactments">
        <b>
         Reenactments.
        </b>
-      </p>
+      </h4>
       <p>
        The 2002 Reenactment added the subsection designations and deleted “the department of” following “director of” in subsection (a).
       </p>
@@ -5908,11 +5920,13 @@
        </cite>
        ; impl. am. P.L. 1961, ch. 73, § 14; P.L. 2001, ch. 77, art. 23, § 2; P.L. 2007, ch. 73, art. 22, § 1.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t14c01s14-1-36-reenactments">
        <b>
         Reenactments.
        </b>
-      </p>
+      </h4>
       <p>
        The 2002 Reenactment deleted “the department of” following “director of” throughout the section.
       </p>
@@ -7602,11 +7616,13 @@
        </cite>
        ; P.L. 1992, ch. 244, § 1; P.L. 2001, ch. 77, art. 23, § 2.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t14c01s14-1-59-reenactments">
        <b>
         Reenactments.
        </b>
-      </p>
+      </h4>
       <p>
        The 2002 Reenactment substituted ‘’department of elementary and secondary education” for “department of education”.
       </p>
@@ -7806,11 +7822,13 @@
       <p>
        P.L. 1977, ch. 70, § 1; P.L. 1990, ch. 325, § 1; P.L. 1997, ch. 187, § 1.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t14c01s14-1-64-reenactments">
        <b>
         Reenactments.
        </b>
-      </p>
+      </h4>
       <p>
        The 2002 Reenactment added the subsection designations.
       </p>
@@ -9224,22 +9242,21 @@
       <p>
        P.L. 2003, ch. 187, § 2; P.L. 2003, ch. 191, § 2.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t14c6.1s14-6.1-1-theinterstatecompactonjuveniles">
        <b>
         The Interstate Compact on Juveniles
        </b>
-      </p>
+      </h4>
       <p>
        The contracting states solemnly agree:
       </p>
      </div>
      <div>
       <h3 id="t14c6.1s14-6.1-1aI">
-       ARTICLE I
+       ARTICLE I PURPOSE
       </h3>
-      <p>
-       PURPOSE
-      </p>
       <p>
        The compacting states to this interstate compact recognize that each state is responsible for the proper supervision or return of juveniles, delinquents and status offenders who are on probation or parole and who have absconded, escaped or run away from supervision and control and in so doing have endangered their own safety and the safety of others. The compacting states also recognize that each state is responsible for the safe return of juveniles who have run away from home and in doing so have left their state of residence. The compacting states also recognize that congress, by enacting the Crime Control Act, 4 U.S.C. § 112 (1965), has authorized and encouraged compacts for cooperative efforts and mutual assistance in the prevention of crime.
       </p>
@@ -9249,11 +9266,8 @@
      </div>
      <div>
       <h3 id="t14c6.1s14-6.1-1aII">
-       ARTICLE II
+       ARTICLE II DEFINITIONS
       </h3>
-      <p>
-       DEFINITIONS
-      </p>
       <p>
        As used in this compact, unless the context clearly requires a different construction:
       </p>
@@ -9315,11 +9329,8 @@
      </div>
      <div>
       <h3 id="t14c6.1s14-6.1-1aIII">
-       ARTICLE III
+       ARTICLE III INTERSTATE COMMISSION FOR JUVENILES
       </h3>
-      <p>
-       INTERSTATE COMMISSION FOR JUVENILES
-      </p>
       <ol type="a">
        <li id="t14c6.1s14-6.1-1aIIIol1a">
         The compacting states hereby create the “Interstate commission for Juveniles.” The commission shall be a body corporate and joint agency of the compacting states. The commission shall have all the responsibilities, powers and duties set forth herein, and such additional powers as may be conferred upon it by subsequent action of the respective legislatures of the compacting states in accordance with the terms of this compact.
@@ -9387,11 +9398,8 @@
      </div>
      <div>
       <h3 id="t14c6.1s14-6.1-1aIV">
-       ARTICLE IV
+       ARTICLE IV POWERS AND DUTIES OF THE INTERSTATE COMMISSION
       </h3>
-      <p>
-       POWERS AND DUTIES OF THE INTERSTATE COMMISSION
-      </p>
       <p>
        The commission shall have the following powers and duties:
       </p>
@@ -9460,12 +9468,9 @@
      </div>
      <div>
       <h3 id="t14c6.1s14-6.1-1aV">
-       ARTICLE V
-      </h3>
-      <p>
-       ORGANIZATION AND OPERATION OF THE INTERSTATE 
+       ARTICLE V ORGANIZATION AND OPERATION OF THE INTERSTATE 
 COMMISSION
-      </p>
+      </h3>
       <ol type="a">
        <li id="t14c6.1s14-6.1-1aVol1a">
         Bylaws — The interstate commission shall, by a majority of the members present and voting, within twelve (12) months after the first interstate commission meeting, adopt bylaws to govern its conduct as may be necessary or appropriate to carry out the purposes of the compact, including, but not limited to:
@@ -9528,11 +9533,8 @@ COMMISSION
      </div>
      <div>
       <h3 id="t14c6.1s14-6.1-1aVI">
-       ARTICLE VI
+       ARTICLE VI RULEMAKING FUNCTIONS OF THE INTERSTATE COMMISSION
       </h3>
-      <p>
-       RULEMAKING FUNCTIONS OF THE INTERSTATE COMMISSION
-      </p>
       <ol type="a">
        <li id="t14c6.1s14-6.1-1aVIol1a">
         The interstate commission shall promulgate and publish rules in order to effectively and efficiently achieve the purposes of the compact.
@@ -9573,12 +9575,9 @@ COMMISSION
      </div>
      <div>
       <h3 id="t14c6.1s14-6.1-1aVII">
-       ARTICLE VII
-      </h3>
-      <p>
-       OVERSIGHT, ENFORCEMENT AND DISPUTE RESOLUTION BY 
+       ARTICLE VII OVERSIGHT, ENFORCEMENT AND DISPUTE RESOLUTION BY 
 THE INTERSTATE COMMISSION
-      </p>
+      </h3>
       <ol type="a">
        <li id="t14c6.1s14-6.1-1aVIIol1a">
         Oversight:
@@ -9609,11 +9608,8 @@ THE INTERSTATE COMMISSION
      </div>
      <div>
       <h3 id="t14c6.1s14-6.1-1aVIII">
-       ARTICLE VIII
+       ARTICLE VIII FINANCE
       </h3>
-      <p>
-       FINANCE
-      </p>
       <ol type="a">
        <li id="t14c6.1s14-6.1-1aVIIIol1a">
         The interstate commission shall pay or provide for the payment of the reasonable expenses of its establishment, organization and ongoing activities.
@@ -9631,22 +9627,16 @@ THE INTERSTATE COMMISSION
      </div>
      <div>
       <h3 id="t14c6.1s14-6.1-1aIX">
-       ARTICLE IX
+       ARTICLE IX THE STATE COUNCIL
       </h3>
-      <p>
-       THE STATE COUNCIL
-      </p>
       <p>
        Each member state shall create a state council for Interstate Juvenile Supervision. While each state may determine the membership of its own state council, its membership must include at least one (1) representative from the legislative, judicial, and executive branches of government, victims groups, and the compact administrator, deputy compact administrator or designee. Each compacting state retains the right to determine the qualifications of the compact administrator or deputy compact administrator. Each state council will advise and may exercise oversight and advocacy concerning that state’s participation in Interstate commission activities and other duties as may be determined by that state, including, but not limited to, development of policy concerning operations and procedures of the compact within that state.
       </p>
      </div>
      <div>
       <h3 id="t14c6.1s14-6.1-1aX">
-       ARTICLE X
+       ARTICLE X COMPACTING STATES, EFFECTIVE DATE AND AMENDMENT
       </h3>
-      <p>
-       COMPACTING STATES, EFFECTIVE DATE AND AMENDMENT
-      </p>
       <ol type="a">
        <li id="t14c6.1s14-6.1-1aXol1a">
         Any state, the District of Columbia (or its designee), the Com- monwealth of Puerto Rico, the U.S. Virgin Islands, Guam, American Samoa, and the Northern Mariana’s Islands as defined in Article II of this compact is eligible to become a compacting state.
@@ -9661,12 +9651,9 @@ THE INTERSTATE COMMISSION
      </div>
      <div>
       <h3 id="t14c6.1s14-6.1-1aXI">
-       ARTICLE XI
-      </h3>
-      <p>
-       WITHDRAWAL, DEFAULT, TERMINATION AND JUDICIAL 
+       ARTICLE XI WITHDRAWAL, DEFAULT, TERMINATION AND JUDICIAL 
 ENFORCEMENT
-      </p>
+      </h3>
       <ol type="a">
        <li id="t14c6.1s14-6.1-1aXIol1a">
         Withdrawal:
@@ -9743,22 +9730,16 @@ ENFORCEMENT
      </div>
      <div>
       <h3 id="t14c6.1s14-6.1-1aXII">
-       ARTICLE XII
+       ARTICLE XII SEVERABILITY AND CONSTRUCTION
       </h3>
-      <p>
-       SEVERABILITY AND CONSTRUCTION
-      </p>
       <p>
        The provisions of this compact shall be severable, and if any phrase, clause, sentence or provision is deemed unenforceable, the remaining provisions of the compact shall be enforceable. Provided, further, that the provisions of this compact shall be liberally construed to effectuate its purposes.
       </p>
      </div>
      <div>
       <h3 id="t14c6.1s14-6.1-1aXIII">
-       ARTICLE XIII
+       ARTICLE XIII BINDING EFFECT OF COMPACT AND OTHER LAWS
       </h3>
-      <p>
-       BINDING EFFECT OF COMPACT AND OTHER LAWS
-      </p>
       <ol type="a">
        <li id="t14c6.1s14-6.1-1aXIIIol1a">
         Other Laws:
