--- a/transforms/ri/ocri/r70/gov.ri.code.title.16.html
+++ b/transforms/ri/ocri/r70/gov.ri.code.title.16.html
@@ -10,12 +10,12 @@
   <meta content="1504.84" name="CocoaVersion" />
   <link href="https://unicourt.github.io/cic-code-ga/transforms/ga/stylesheet/ga_code_stylesheet.css" rel="stylesheet" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
-  <meta content="Release 70 of the Official Code of Rhode Island Annotated released 2021.11.Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-23.This document is not subject to copyright and is in the public domain. " name="description" />
+  <meta content="Release 70 of the Official Code of Rhode Island Annotated released 2021.11.Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-24.This document is not subject to copyright and is in the public domain. " name="description" />
  </head>
  <body>
   <nav>
    <p class="transformation">
-    Release 70 of the Official Code of Rhode Island Annotated released 2021.11. Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-23. This document is not subject to copyright and is in the public domain.
+    Release 70 of the Official Code of Rhode Island Annotated released 2021.11. Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-24. This document is not subject to copyright and is in the public domain.
    </p>
    <h1 id="t16">
     <b>
@@ -8521,11 +8521,13 @@
        </cite>
        ; P.L. 1979, ch. 173, § 1; P.L. 1986, ch. 287, art. 12, § 2.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t16c04s16-4-1-legislativeintent">
        <b>
         Legislative Intent.
        </b>
-      </p>
+      </h4>
       <p>
        Section 1 of P.L. 1986, ch. 287, art. 12 contains legislative findings concerning the necessity for the amendments of §§
        <cite class="ocri">
@@ -10684,11 +10686,13 @@
       <p>
        P.L. 2014, ch. 431, § 1, and P.L. 2014, ch. 456, § 1 enacted identical amendments to this section
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t16c07s16-7-22-applicability">
        <b>
         Applicability.
        </b>
-      </p>
+      </h4>
       <p>
        P.L. 2013, ch. 358, § 3 provides that the amendment to this section shall take effect upon passage [July 15, 2013] and shall include additional funding in the foundation educational aid estimate.
       </p>
@@ -13257,11 +13261,11 @@
        </cite>
        , §
        <cite class="ocri">
-        <a href="#t16c7.1s16-7.1-11" target="_self">
-         16-7.1-11
+        <a href="#t16c7.1s16-7.1-11.1" target="_self">
+         16-7.1-11.1
         </a>
        </cite>
-       .1, §
+       , §
        <cite class="ocri">
         <a href="#t16c7.1s16-7.1-12" target="_self">
          16-7.1-12
@@ -14498,11 +14502,11 @@
       </cite>
       ,
       <cite class="ocri">
-       <a href="#t16c7.1s16-7.1-11" target="_self">
-        16-7.1-11
+       <a href="#t16c7.1s16-7.1-11.1" target="_self">
+        16-7.1-11.1
        </a>
       </cite>
-      .1,
+      ,
       <cite class="ocri">
        <a href="#t16c7.1s16-7.1-12" target="_self">
         16-7.1-12
@@ -16752,11 +16756,13 @@
        P.L. 2021, ch. 296, § 1, and
        P.L. 2021, ch. 297, § 1 enacted identical versions of this section.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t16c11s16-11-10-delayedeffectivedates">
        <b>
         Delayed Effective Dates.
        </b>
-      </p>
+      </h4>
       <p>
        P.L. 2021, ch. 296, § 2, provides that this section takes effect on January 1, 2022.
       </p>
@@ -20757,11 +20763,13 @@
        </cite>
        ; P.L. 1962, ch. 212, § 2; P.L. 1972, ch. 139, § 1; P.L. 1976, ch. 236, § 2; P.L. 1979, ch. 211, § 1; P.L. 1981, ch. 162, § 2; P.L. 1983, ch. 217, § 1; P.L. 1985, ch. 258, § 1; P.L. 1995, ch. 370, art. 15, § 1; P.L. 1996, ch. 384, § 1; P.L. 1998, ch. 411, § 2; P.L. 2001, ch. 86, § 36; P.L. 2002, ch. 383, § 1; P.L. 2007, ch. 510, § 6; P.L. 2011, ch. 408, § 10; P.L. 2011, ch. 409, § 10.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t16c16s16-16-1-severability">
        <b>
         Severability.
        </b>
-      </p>
+      </h4>
       <p>
        P.L. 1998, ch. 411, § 4 provides that if any provision of that act or the application thereof to any person or circumstances is held invalid, that invalidity shall not affect other provisions or applications which can be given effect without the invalid provisions or applications.
       </p>
@@ -21444,11 +21452,13 @@
        </cite>
        ; P.L. 1970, ch. 112, art. 9, § 2; P.L. 1996, ch. 435, § 2; P.L. 1998, ch. 70, § 3; P.L. 1998, ch. 291, § 3; P.L. 2009, ch. 68, art. 7, § 4; P.L. 2011, ch. 408, § 10; P.L. 2011, ch. 409, § 10.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t16c16s16-16-8-severability">
        <b>
         Severability.
        </b>
-      </p>
+      </h4>
       <p>
        P.L. 1998, ch. 70, § 4 and P.L. 1998, ch. 291, § 4 each declares the provisions of the respective act severable, so that if any provision of the act or the application thereof to any person or circumstances is held invalid, that invalidity shall not affect other provisions or applications of the act, which can be given effect without the invalid provisions or application.
       </p>
@@ -24095,11 +24105,8 @@
      </p>
      <div>
       <h3 id="t16c17.2s16-17.2-1aI">
-       Article I
+       Article I. Findings.
       </h3>
-      <p>
-       Findings.
-      </p>
       <p>
        The parties to this compact find as follows:
       </p>
@@ -24117,11 +24124,8 @@
      </div>
      <div>
       <h3 id="t16c17.2s16-17.2-1aII">
-       Article II
+       Article II. Definitions.
       </h3>
-      <p>
-       Definitions.
-      </p>
       <p>
        As used in this compact, unless the context clearly indicates otherwise:
       </p>
@@ -24165,11 +24169,8 @@
      </div>
      <div>
       <h3 id="t16c17.2s16-17.2-1aIII">
-       Article III
+       Article III. Procedures.
       </h3>
-      <p>
-       Procedures.
-      </p>
       <p>
        Each state that is a party to this compact shall establish and maintain procedures adequate to effectuate the transfer of money and pensionable service from an exporting plan to an importing plan in accordance with the following provisions:
       </p>
@@ -24225,11 +24226,8 @@
      </div>
      <div>
       <h3 id="t16c17.2s16-17.2-1aIV">
-       Article IV
+       Article IV. Effective Date of Compact; Withdrawal from Compact.
       </h3>
-      <p>
-       Effective Date of Compact; Withdrawal from Compact.
-      </p>
       <ol type="A">
        <li id="t16c17.2s16-17.2-1aIV-A">
         When two or more states enact statutes adopting this compact, it shall become effective in those states on the dates specified in such statutes. Any other state may thereafter become a party to this compact by enacting a statute adopting it, and the compact shall become effective in that state on the date specified in such statute.
@@ -24241,22 +24239,16 @@
      </div>
      <div>
       <h3 id="t16c17.2s16-17.2-1aV">
-       Article V
+       Article V. Other Arrangements Unaffected.
       </h3>
-      <p>
-       Other Arrangements Unaffected.
-      </p>
       <p>
        Nothing contained in this compact shall be construed to prevent or inhibit states that are parties to this compact from entering into other arrangements, not inconsistent with the terms of this compact, to effectuate the purpose set forth in Article I.
       </p>
      </div>
      <div>
       <h3 id="t16c17.2s16-17.2-1aVI">
-       Article VI
+       Article VI. Construction and Severability.
       </h3>
-      <p>
-       Construction and Severability.
-      </p>
       <ol type="A">
        <li id="t16c17.2s16-17.2-1aVI-A">
         This compact shall be liberally construed so as to effectuate the purpose set forth in Article I.
@@ -28292,11 +28284,13 @@
        P.L. 2021, ch. 115, § 1, and P.L. 2021, ch. 116, § 1 enacted
        identical versions of this section.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t16c21s16-21-37-delayedeffectivedates">
        <b>
         Delayed Effective Dates.
        </b>
-      </p>
+      </h4>
       <p>
        P.L. 2021, ch. 115, § 2, provides that this section takes effect on January 1, 2022.
       </p>
@@ -45015,11 +45009,13 @@
       <p>
        P.L. 2012, ch. 241, art. 14, § 2.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t16c48s16-48-9-retroactiveeffectivedates">
        <b>
         Retroactive Effective Dates.
        </b>
-      </p>
+      </h4>
       <p>
        P.L. 2012, ch. 241, art. 14, § 3 provides that the amendments to this section by that act shall take effect upon passage [June 15, 2012] and be retroactive to July 1, 2011.
       </p>
@@ -45407,20 +45403,22 @@
      <h3 id="t16c49s16-49-18">
       16-49-18. — 16-49-20.  [Transferred.]
      </h3>
-     <p>
-      <b>
-       Transferred Sections.
-      </b>
-     </p>
-     <p>
-      These sections (G.L. 1956, §§
-      <cite class="ocri">
-       <a href="#t16c49s16-49-18" target="_self">
-        16-49-18
-       </a>
-      </cite>
-      , 16-49-19, 16-49-20; P.L. 1969, ch. 231, §§ 12, 13, 15) were transferred to §§ 16-49-15, 16-49-16, 16-49-17 by the 1973 amendment.
-     </p>
+     <div>
+      <h4 id="t16c49s16-49-18-transferredsections">
+       <b>
+        Transferred Sections.
+       </b>
+      </h4>
+      <p>
+       These sections (G.L. 1956, §§
+       <cite class="ocri">
+        <a href="#t16c49s16-49-18" target="_self">
+         16-49-18
+        </a>
+       </cite>
+       , 16-49-19, 16-49-20; P.L. 1969, ch. 231, §§ 12, 13, 15) were transferred to §§ 16-49-15, 16-49-16, 16-49-17 by the 1973 amendment.
+      </p>
+     </div>
     </div>
    </div>
    <div>
@@ -48126,11 +48124,13 @@
       <p>
        P.L. 1997, ch. 81, § 2; P.L. 1997, ch. 91, § 2; P.L. 2006, ch. 332, § 2; P.L. 2006, ch. 435, § 2; P.L. 2015, ch. 141, art. 7, § 6.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t16c57s16-57-6.5-severability">
        <b>
         Severability.
        </b>
-      </p>
+      </h4>
       <p>
        P.L. 2006, ch. 332, § 4 provides: “If any provision of this act or the application thereof to any person or circumstances is held invalid, such invalidity shall not affect other provisions or applications of the act, which can be given effect without the invalid provision or application, and to this end the provisions of this act are declared to be severable.”
       </p>
@@ -48225,11 +48225,13 @@
       <p>
        P.L. 1977, ch. 238, § 1; P.L. 1979, ch. 11, § 1; P.L. 1981, ch. 32, § 21; P.L. 1991, ch. 44, art. 38, § 2; P.L. 1995, ch. 396, § 1; P.L. 1999, ch. 488, § 1; P.L. 2006, ch. 332, § 2; P.L. 2006, ch. 435, § 2; P.L. 2015, ch. 141, art. 7, § 6.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t16c57s16-57-7-severability">
        <b>
         Severability.
        </b>
-      </p>
+      </h4>
       <p>
        P.L. 2006, ch. 332, § 4 provides: “If any provision of this act or the application thereof to any person or circumstances is held invalid, such invalidity shall not affect other provisions or applications of the act, which can be given effect without the invalid provision or application, and to this end the provisions of this act are declared to be severable.”
       </p>
@@ -52790,11 +52792,13 @@
       <p>
        P.L. 1981, ch. 44, § 1; P.L. 1991, ch. 44, art. 38, § 2; P.L. 2005, ch. 241, § 8; P.L. 2005, ch. 319, § 8; P.L. 2006, ch. 332, § 3; P.L. 2006, ch. 435, § 3; P.L. 2007, ch. 362, § 1; P.L. 2012, ch. 241, art. 4, § 2.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t16c62s16-62-7-severability">
        <b>
         Severability.
        </b>
-      </p>
+      </h4>
       <p>
        P.L. 2006, ch. 332, § 4 provides: “If any provision of this act or the application thereof to any person or circumstances is held invalid, such invalidity shall not affect other provisions or applications of the act, which can be given effect without the invalid provision or application, and to this end the provisions of this act are declared to be severable.”
       </p>
@@ -65504,11 +65508,13 @@
       <p>
        P.L. 2021, ch. 306, § 1, and P.L. 2021, ch. 307, § 1 enacted identical amendments to this section.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t16c97.1s16-97.1-1.01-delayedeffectivedates">
        <b>
         Delayed Effective Dates.
        </b>
-      </p>
+      </h4>
       <p>
        P.L. 2021, ch. 306, § 2, provides that the amendment to this section by that act takes effect on June 30, 2022.
       </p>
