--- a/transforms/ri/ocri/r70/gov.ri.code.title.17.html
+++ b/transforms/ri/ocri/r70/gov.ri.code.title.17.html
@@ -10,12 +10,12 @@
   <meta content="1504.84" name="CocoaVersion" />
   <link href="https://unicourt.github.io/cic-code-ga/transforms/ga/stylesheet/ga_code_stylesheet.css" rel="stylesheet" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
-  <meta content="Release 70 of the Official Code of Rhode Island Annotated released 2021.11.Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-23.This document is not subject to copyright and is in the public domain. " name="description" />
+  <meta content="Release 70 of the Official Code of Rhode Island Annotated released 2021.11.Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-24.This document is not subject to copyright and is in the public domain. " name="description" />
  </head>
  <body>
   <nav>
    <p class="transformation">
-    Release 70 of the Official Code of Rhode Island Annotated released 2021.11. Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-23. This document is not subject to copyright and is in the public domain.
+    Release 70 of the Official Code of Rhode Island Annotated released 2021.11. Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-24. This document is not subject to copyright and is in the public domain.
    </p>
    <h1 id="t17">
     <b>
@@ -2824,33 +2824,27 @@
      </p>
      <div>
       <h3 id="t17c4.2s17-4.2-1aI">
-       ARTICLE I
+       ARTICLE I. 
+MEMBERSHIP.
       </h3>
-      <p>
-       MEMBERSHIP.
-      </p>
       <p>
        Any state of the United States and the District of Columbia may become a member of this agreement by enacting this agreement.
       </p>
      </div>
      <div>
       <h3 id="t17c4.2s17-4.2-1aII">
-       ARTICLE II
+       ARTICLE II. 
+RIGHT OF THE PEOPLE IN MEMBER STATES TO VOTE FOR PRESIDENT AND VICE PRESIDENT.
       </h3>
-      <p>
-       RIGHT OF THE PEOPLE IN MEMBER STATES TO VOTE FOR PRESIDENT AND VICE PRESIDENT.
-      </p>
       <p>
        Each member state shall conduct a statewide popular election for president and vice president of the United States.
       </p>
      </div>
      <div>
       <h3 id="t17c4.2s17-4.2-1aIII">
-       ARTICLE III
+       ARTICLE III. 
+ MANNER OF APPOINTING PRESIDENTIAL ELECTORS IN MEMBER STATES.
       </h3>
-      <p>
-       MANNER OF APPOINTING PRESIDENTIAL ELECTORS IN MEMBER STATES.
-      </p>
       <p>
        Prior to the time set by law for the meeting and voting by the presidential electors, the chief election official of each member state shall determine the number of votes for each presidential slate in each state of the United States and in the District of Columbia in which votes have been cast in a statewide popular election and shall add such votes together to produce a “national popular vote total” for each presidential slate.
       </p>
@@ -2881,11 +2875,9 @@
      </div>
      <div>
       <h3 id="t17c4.2s17-4.2-1aIV">
-       ARTICLE IV
+       ARTICLE IV. 
+ OTHER PROVISIONS.
       </h3>
-      <p>
-       OTHER PROVISIONS.
-      </p>
       <p>
        This agreement shall take effect when states cumulatively possessing a majority of the electoral votes have enacted this agreement in substantially the same form and the enactments by such states have taken effect in each state.
       </p>
@@ -2904,11 +2896,9 @@
      </div>
      <div>
       <h3 id="t17c4.2s17-4.2-1aV">
-       ARTICLE V
+       ARTICLE V. 
+ DEFINITIONS.
       </h3>
-      <p>
-       DEFINITIONS.
-      </p>
       <p>
        For purposes of this agreement:
       </p>
@@ -3529,11 +3519,13 @@
       <p>
        P.L. 2002, ch. 191, § 1; P.L. 2002, ch. 192, § 1.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t17c06s17-6-1.2-contingentlyrepealedsections">
        <b>
         Contingently Repealed Sections.
        </b>
-      </p>
+      </h4>
       <p>
        P.L. 2002, ch. 191, § 2, provides that this section as enacted by that Act takes effect upon passage [June 25, 2002], but shall be repealed on June 30, 2005, if the necessary federal funding is not received by that date.
       </p>
@@ -6363,11 +6355,13 @@
       <p>
        P.L. 2017, ch. 226, § 1, and P.L. 2017, ch. 321, § 1 enacted identical amendments to this section.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t17c9.1s17-9.1-7-contingenteffectivedates">
        <b>
         Contingent Effective Dates.
        </b>
-      </p>
+      </h4>
       <p>
        P.L. 2017, ch. 226, § 2 provides: “This act shall take effect thirty (30) days after the administrator of the division of motor vehicles certifies in writing to the general assembly that the Rhode Island motor vehicle licensing system (RIMS) computer system is capable of meeting the requirements set forth in the act.” The certification was made to the General Assembly on June 7, 2018.
       </p>
@@ -19102,11 +19096,13 @@
       <p>
        P.L. 2015, ch. 176, § 3, and P.L. 2015, ch. 201, § 3 enacted identical amendments to this section.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t17c19s17-19-8.2-contingentlyrepealedsections">
        <b>
         Contingently Repealed Sections.
        </b>
-      </p>
+      </h4>
       <p>
        P.L. 2002, ch. 177, § 2, provides that this section takes effect upon passage [June 25, 2002], but shall be repealed on June 30, 2005 if the necessary federal funding is not received by that date.
       </p>
