--- a/transforms/ri/ocri/r70/gov.ri.code.title.19.html
+++ b/transforms/ri/ocri/r70/gov.ri.code.title.19.html
@@ -10,12 +10,12 @@
   <meta content="1504.84" name="CocoaVersion" />
   <link href="https://unicourt.github.io/cic-code-ga/transforms/ga/stylesheet/ga_code_stylesheet.css" rel="stylesheet" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
-  <meta content="Release 70 of the Official Code of Rhode Island Annotated released 2021.11.Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-23.This document is not subject to copyright and is in the public domain. " name="description" />
+  <meta content="Release 70 of the Official Code of Rhode Island Annotated released 2021.11.Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-24.This document is not subject to copyright and is in the public domain. " name="description" />
  </head>
  <body>
   <nav>
    <p class="transformation">
-    Release 70 of the Official Code of Rhode Island Annotated released 2021.11. Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-23. This document is not subject to copyright and is in the public domain.
+    Release 70 of the Official Code of Rhode Island Annotated released 2021.11. Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-24. This document is not subject to copyright and is in the public domain.
    </p>
    <h1 id="t19">
     <b>
@@ -19481,13 +19481,7 @@
       19-14.10-19.  Report to Nationwide Mortgage Licensing System and Registry.
      </h3>
      <p>
-      Subject to state privacy law the director, or the director’s designee, is required to report regularly violations of this chapter, as well as enforcement actions and other relevant information, to the Nationwide Mortgage Licensing System and Registry subject to the provisions contained in §
-      <cite class="ocri">
-       <a href="#t19c01s19-1-4" target="_self">
-        19-1-4
-       </a>
-      </cite>
-      -3.
+      Subject to state privacy law the director, or the director’s designee, is required to report regularly violations of this chapter, as well as enforcement actions and other relevant information, to the Nationwide Mortgage Licensing System and Registry subject to the provisions contained in § 19-1-4-3.
      </p>
      <div>
       <h4 id="t19c14.10s19-14.10-19-historyofsection">
@@ -19504,13 +19498,7 @@
        </b>
       </h4>
       <p>
-       The reference in this section to §
-       <cite class="ocri">
-        <a href="#t19c01s19-1-4" target="_self">
-         19-1-4
-        </a>
-       </cite>
-       -3 apparently should be to §
+       The reference in this section to § 19-1-4-3 apparently should be to §
        <cite class="ocri">
         <a href="#t19c14s19-14-3" target="_self">
          19-14-3
@@ -23573,11 +23561,13 @@
       <p>
        P.L. 2016, ch. 530, § 1.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t19c32s19-32-1-applicability">
        <b>
         Applicability.
        </b>
-      </p>
+      </h4>
       <p>
        P.L. 2016, ch. 530, § 2 provides that this chapter takes effect upon passage [August 13, 2016] and shall apply to all guaranteed asset-protection waivers which become effective on or after January 1, 2017.
       </p>
