--- a/transforms/ri/ocri/r70/gov.ri.code.title.20.html
+++ b/transforms/ri/ocri/r70/gov.ri.code.title.20.html
@@ -10,12 +10,12 @@
   <meta content="1504.84" name="CocoaVersion" />
   <link href="https://unicourt.github.io/cic-code-ga/transforms/ga/stylesheet/ga_code_stylesheet.css" rel="stylesheet" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
-  <meta content="Release 70 of the Official Code of Rhode Island Annotated released 2021.11.Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-23.This document is not subject to copyright and is in the public domain. " name="description" />
+  <meta content="Release 70 of the Official Code of Rhode Island Annotated released 2021.11.Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-24.This document is not subject to copyright and is in the public domain. " name="description" />
  </head>
  <body>
   <nav>
    <p class="transformation">
-    Release 70 of the Official Code of Rhode Island Annotated released 2021.11. Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-23. This document is not subject to copyright and is in the public domain.
+    Release 70 of the Official Code of Rhode Island Annotated released 2021.11. Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-24. This document is not subject to copyright and is in the public domain.
    </p>
    <h1 id="t20">
     <b>
@@ -3782,11 +3782,13 @@
       <p>
        P.L. 2002, ch. 47, § 4.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t20c2.1s20-2.1-1-severability">
        <b>
         Severability.
        </b>
-      </p>
+      </h4>
       <p>
        P.L. 2002, ch. 47, § 12 provides: “If any clause, sentence, paragraph, section or part of this act shall be adjudged to be invalid by any court of competent jurisdiction, the judgment shall not affect, impair, or invalidate the remainder of the act.”
       </p>
@@ -4057,11 +4059,13 @@
       <p>
        P.L. 2002, ch. 47, § 4; P.L. 2004, ch. 8, § 3; P.L. 2004, ch. 16, § 3; P.L. 2015, ch. 177, § 1; P.L. 2015, ch. 199, § 1; P.L. 2021, ch. 162, art. 7, § 4, effective July 6, 2021.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t20c2.1s20-2.1-4-compilersnotes">
        <b>
         Compiler's Notes
        </b>
-      </p>
+      </h4>
       <p>
        P.L. 2021, ch. 162, art. 7, § 4, changed the references in this section that refer to §
        <cite class="ocri">
@@ -4192,11 +4196,13 @@
       <p>
        P.L. 2002, ch. 47, § 4; P.L. 2004, ch. 8, § 3; P.L. 2004, ch. 16, § 3; P.L. 2015, ch. 177, § 1; P.L. 2015, ch. 199, § 1.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t20c2.1s20-2.1-5-delayedeffectivedates">
        <b>
         Delayed Effective Dates.
        </b>
-      </p>
+      </h4>
       <p>
        P.L. 2021, ch. 162, art. 7, § 11, provides that the amendment to this section by that act takes effect on July 1, 2022.
       </p>
@@ -4447,11 +4453,13 @@
       <p>
        P.L. 2002, ch. 47, § 4; P.L. 2004, ch. 8, § 3; P.L. 2004, ch. 16, § 3.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t20c2.1s20-2.1-6-delayedeffectivedates">
        <b>
         Delayed Effective Dates.
        </b>
-      </p>
+      </h4>
       <p>
        P.L. 2021, ch. 162, art. 7, § 11, provides that the amendment to this section by that act takes effect on July 1, 2022.
       </p>
@@ -16902,11 +16910,9 @@
      </p>
      <div>
       <h3 id="t20c39s20-39-1aI">
-       ARTICLE I
+       ARTICLE I 
+Findings, Declaration of Policy and Purpose
       </h3>
-      <p>
-       Findings, Declaration of Policy and Purpose
-      </p>
       <ol type="a">
        <li id="t20c39s20-39-1aIol1a">
         The participating states find that:
@@ -17001,11 +17007,9 @@
      </div>
      <div>
       <h3 id="t20c39s20-39-1aII">
-       ARTICLE II
+       ARTICLE II 
+Definitions
       </h3>
-      <p>
-       Definitions
-      </p>
       <ol>
        <li id="t20c39s20-39-1aIIol11">
         “Citation” means any summons, complaint, summons and complaint, ticket, penalty assessment, or other official document issued to a person by a wildlife officer or other peace officer for a wildlife violation which contains an order requiring the person to respond.
@@ -17065,11 +17069,9 @@
      </div>
      <div>
       <h3 id="t20c39s20-39-1aIII">
-       ARTICLE III
+       ARTICLE III 
+Procedures for Issuing State
       </h3>
-      <p>
-       Procedures for Issuing State
-      </p>
       <ol type="a">
        <li id="t20c39s20-39-1aIIIol1a">
         When issuing a citation for a wildlife violation, a wildlife officer shall issue a citation to any person whose primary residence is in a participating state in the same manner as though the person were a resident of the issuing state and shall not require such person to post collateral to secure appearance, subject to the exceptions noted in subsection (b) if the officer receives the recognizance of such person that he/she will comply with the terms of the citation.
@@ -17095,11 +17097,9 @@
      </div>
      <div>
       <h3 id="t20c39s20-39-1aIV">
-       ARTICLE IV
+       ARTICLE IV 
+Procedure for Home State
       </h3>
-      <p>
-       Procedure for Home State
-      </p>
       <ol type="a">
        <li id="t20c39s20-39-1aIVol1a">
         Upon receipt of a report from the licensing authority of the issuing state reporting the failure of a violator to comply with the terms of a citation, the licensing authority of the home state shall notify the violator and shall initiate a suspension action in accordance with the home state’s suspension procedures and shall suspend the violator’s license privileges until satisfactory evidence of compliance with the terms of the wildlife citation has been furnished by the issuing state to the home state licensing authority. All member states may honor a suspension based on failure to comply. Due process safeguards will be accorded.
@@ -17114,11 +17114,9 @@
      </div>
      <div>
       <h3 id="t20c39s20-39-1aV">
-       ARTICLE V
+       ARTICLE V 
+Reciprocal Recognition of Suspension
       </h3>
-      <p>
-       Reciprocal Recognition of Suspension
-      </p>
       <ol type="a">
        <li id="t20c39s20-39-1aVol1a">
         All participating states shall recognize the suspension of license privileges of any person by any participating state as though the violation resulting in the suspension had occurred in their state and could have been the basis for suspension of license privileges in their state.
@@ -17130,22 +17128,18 @@
      </div>
      <div>
       <h3 id="t20c39s20-39-1aVI">
-       ARTICLE VI
+       ARTICLE VI 
+Applicability of Other Laws
       </h3>
-      <p>
-       Applicability of Other Laws
-      </p>
       <p>
        Except as expressly required by provisions of this compact, nothing herein shall be construed to affect the right of any participating state to apply any of its laws relating to license privileges to any person or circumstance or to invalidate or prevent any agreement or other cooperative arrangement between a participating state and a nonparticipating state concerning wildlife law enforcement.
       </p>
      </div>
      <div>
       <h3 id="t20c39s20-39-1aVII">
-       ARTICLE VII
+       ARTICLE VII 
+Compact Administrator Procedures
       </h3>
-      <p>
-       Compact Administrator Procedures
-      </p>
       <ol type="a">
        <li id="t20c39s20-39-1aVIIol1a">
         For the purpose of administering the provisions of this compact and to serve as a governing body for the resolution of all matters relating to the operation of this compact, a board of compact administrators is established. The board shall be composed of one representative from each of the participating states to be known as the compact administrator. The compact administrator shall be appointed by the head of the licensing authority of each participating state and shall serve and be subject to removal in accordance with the laws of the state he or she represents. A compact administrator may provide for the discharge of his or her duties and the performance of his or her functions as a board member by an alternate. An alternate shall not be entitled to serve unless written notification of his or her identity has been given to the board.
@@ -17172,11 +17166,9 @@
      </div>
      <div>
       <h3 id="t20c39s20-39-1aVIII">
-       ARTICLE VIII
+       ARTICLE VIII 
+Entry into Compact and Withdrawal
       </h3>
-      <p>
-       Entry into Compact and Withdrawal
-      </p>
       <ol type="a">
        <li id="t20c39s20-39-1aVIIIol1a">
         This compact shall become effective at such time as it is adopted in substantially similar form by two (2) or more states.
@@ -17220,11 +17212,9 @@
      </div>
      <div>
       <h3 id="t20c39s20-39-1aIX">
-       ARTICLE IX
+       ARTICLE IX 
+Amendments to the Compact
       </h3>
-      <p>
-       Amendments to the Compact
-      </p>
       <ol type="a">
        <li id="t20c39s20-39-1aIXol1a">
         This compact may be amended from time to time. Amendments shall be presented in resolution form to the chairman of the board of compact administrators and shall be initiated by one or more participating states.
@@ -17239,11 +17229,9 @@
      </div>
      <div>
       <h3 id="t20c39s20-39-1aX">
-       ARTICLE X
+       ARTICLE X 
+Construction and Severability
       </h3>
-      <p>
-       Construction and Severability
-      </p>
       <p>
        This compact must be liberally construed so as to effectuate the purposes stated herein. The provisions of this compact shall be severable and if any phrase, clause, sentence, or provision of this compact is declared to be contrary to the constitution of any participating state or of the United States, or the applicability thereof to any government, agency, individual, or circumstance is held invalid, the validity of the remainder of this compact shall not be affected thereby. If this compact shall be held contrary to the constitution of any participating state, the compact shall remain in full force and effect as to the remaining states and in full force and effect as to the participating state affected as to all severable matters.
       </p>
