--- a/transforms/ri/ocri/r70/gov.ri.code.title.22.html
+++ b/transforms/ri/ocri/r70/gov.ri.code.title.22.html
@@ -10,12 +10,12 @@
   <meta content="1504.84" name="CocoaVersion" />
   <link href="https://unicourt.github.io/cic-code-ga/transforms/ga/stylesheet/ga_code_stylesheet.css" rel="stylesheet" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
-  <meta content="Release 70 of the Official Code of Rhode Island Annotated released 2021.11.Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-23.This document is not subject to copyright and is in the public domain. " name="description" />
+  <meta content="Release 70 of the Official Code of Rhode Island Annotated released 2021.11.Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-24.This document is not subject to copyright and is in the public domain. " name="description" />
  </head>
  <body>
   <nav>
    <p class="transformation">
-    Release 70 of the Official Code of Rhode Island Annotated released 2021.11. Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-23. This document is not subject to copyright and is in the public domain.
+    Release 70 of the Official Code of Rhode Island Annotated released 2021.11. Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-24. This document is not subject to copyright and is in the public domain.
    </p>
    <h1 id="t22">
     <b>
@@ -896,11 +896,13 @@
       <p>
        P.L. 1974, ch. 42, § 10.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t22c01s22-1-3-reenactments">
        <b>
         Reenactments.
        </b>
-      </p>
+      </h4>
       <p>
        The 2002 Reenactment redesignated the subdivisions.
       </p>
@@ -1673,11 +1675,13 @@
       <p>
        P.L. 1974, ch. 42, § 8.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t22c02s22-2-3-reenactments">
        <b>
         Reenactments.
        </b>
-      </p>
+      </h4>
       <p>
        The 2002 Reenactment inserted “city or” preceding “town” throughout, and “cities or” preceding “towns” in the first sentence.
       </p>
@@ -2381,11 +2385,13 @@
        </cite>
        ; P.L. 1989, ch. 126, art. 13, § 1; P.L. 1992, ch. 234, § 1; P.L. 2002, ch. 292, § 67.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t22c03s22-3-12-reenactments">
        <b>
         Reenactments.
        </b>
-      </p>
+      </h4>
       <p>
        The 2002 Reenactment deleted the last sentence of the section.
       </p>
@@ -3565,14 +3571,16 @@
      <h3 id="t22c06s22-6-11.1">
       22-6-11.1.  [Transferred.]
      </h3>
-     <p>
-      <b>
-       Transferred Sections.
-      </b>
-     </p>
-     <p>
-      This section (P.L. 1967, ch. 222, § 2) was transferred by the 1969 Reenactment of titles 33 to 42 to former § 42-44-11 because of the transfer of duties and functions of the federal coordinator. See notes under Chapter 44 of Title 42.
-     </p>
+     <div>
+      <h4 id="t22c06s22-6-11.1-transferredsections">
+       <b>
+        Transferred Sections.
+       </b>
+      </h4>
+      <p>
+       This section (P.L. 1967, ch. 222, § 2) was transferred by the 1969 Reenactment of titles 33 to 42 to former § 42-44-11 because of the transfer of duties and functions of the federal coordinator. See notes under Chapter 44 of Title 42.
+      </p>
+     </div>
     </div>
     <div>
      <h3 id="t22c06s22-6-12">
@@ -9305,11 +9313,13 @@
       <p>
        P.L. 1986, ch. 472, § 1; P.L. 2001, ch. 180, § 30; P.L. 2002, ch. 292, § 69.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t22c7.8s22-7.8-1-reenactments">
        <b>
         Reenactments.
        </b>
-      </p>
+      </h4>
       <p>
        The 2002 Reenactment revised the last sentence of the section.
       </p>
@@ -9470,11 +9480,13 @@
       <p>
        P.L. 2001, ch. 82, § 1; P.L. 2001, ch. 220, § 1; P.L. 2002, ch. 292, § 70.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t22c7.9s22-7.9-1-reenactments">
        <b>
         Reenactments.
        </b>
-      </p>
+      </h4>
       <p>
        The 2002 Reenactment substituted “president of the senate” for “majority leader of the senate” in the first sentence.
       </p>
@@ -9781,11 +9793,13 @@
        </cite>
        .
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t22c08s22-8-1-reenactments">
        <b>
         Reenactments.
        </b>
-      </p>
+      </h4>
       <p>
        The 2002 Reenactment redesignated the subdivisions.
       </p>
@@ -9924,11 +9938,13 @@
        </cite>
        .
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t22c09s22-9-1-reenactments">
        <b>
         Reenactments.
        </b>
-      </p>
+      </h4>
       <p>
        The 2002 Reenactment added “city or” preceding “town” twice in the last sentence.
       </p>
@@ -10040,11 +10056,13 @@
        </cite>
        .
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t22c09s22-9-2-reenactments">
        <b>
         Reenactments.
        </b>
-      </p>
+      </h4>
       <p>
        The 2002 Reenactment added “city” preceding “town” throughout the section.
       </p>
@@ -11458,11 +11476,13 @@
       <p>
        P.L. 1988, ch. 378, § 2.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t22c11s22-11-3.5-reenactments">
        <b>
         Reenactments.
        </b>
-      </p>
+      </h4>
       <p>
        The 2002 Reenactment substituted “neutrality” for “neutral” in the section heading.
       </p>
@@ -11514,11 +11534,13 @@
       <p>
        P.L. 1960, ch. 181, art. 6, § 1.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t22c11s22-11-6-reenactments">
        <b>
         Reenactments.
        </b>
-      </p>
+      </h4>
       <p>
        The 2002 Reenactment added “Annual” in the section heading and substituted “this chapter” for “§§
        <cite class="ocri">
@@ -12115,11 +12137,13 @@
       <p>
        P.L. 1973, ch. 225, § 1; P.L. 1974, ch. 225, § 1; P.L. 1975; ch. 193, § 1; P.L. 1975, ch. 194, § 1; P.L. 1976, ch. 336, § 1; P.L. 1977, ch. 200, art. 7, § 1; P.L. 1988, ch. 575, § 1; P.L. 2001, ch. 180, § 33; P.L. 2019, ch. 88, art. 2, § 3.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t22c13s22-13-4-reenactments">
        <b>
         Reenactments.
        </b>
-      </p>
+      </h4>
       <p>
        The 2002 Reenactment redesignated the paragraphs in subdivisions (e)(2) and (e)(3).
       </p>
@@ -12264,11 +12288,13 @@
       <p>
        P.L. 1986, ch. 287, art. 22, § 1; P.L. 1988, ch. 129, art. 14, § 1; P.L. 2002, ch. 292, § 73; P.L. 2013, ch. 144, art. 7, § 5; P.L. 2015, ch. 141, art. 7, § 10.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t22c13s22-13-9-reenactments">
        <b>
         Reenactments.
        </b>
-      </p>
+      </h4>
       <p>
        The 2002 Reenactment added the subdivision designations in subsection (d) and revised subsection (f).
       </p>
@@ -13183,11 +13209,13 @@
       <p>
        P.L. 2000, ch. 9, § 1; P.L. 2001, ch. 180, § 37.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t22c18s22-18-1-reenactments">
        <b>
         Reenactments.
        </b>
-      </p>
+      </h4>
       <p>
        The 2002 Reenactment deleted the last sentence of subsection (g) as obsolete.
       </p>
