--- a/transforms/ri/ocri/r70/gov.ri.code.title.24.html
+++ b/transforms/ri/ocri/r70/gov.ri.code.title.24.html
@@ -10,12 +10,12 @@
   <meta content="1504.84" name="CocoaVersion" />
   <link href="https://unicourt.github.io/cic-code-ga/transforms/ga/stylesheet/ga_code_stylesheet.css" rel="stylesheet" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
-  <meta content="Release 70 of the Official Code of Rhode Island Annotated released 2021.11.Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-23.This document is not subject to copyright and is in the public domain. " name="description" />
+  <meta content="Release 70 of the Official Code of Rhode Island Annotated released 2021.11.Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-24.This document is not subject to copyright and is in the public domain. " name="description" />
  </head>
  <body>
   <nav>
    <p class="transformation">
-    Release 70 of the Official Code of Rhode Island Annotated released 2021.11. Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-23. This document is not subject to copyright and is in the public domain.
+    Release 70 of the Official Code of Rhode Island Annotated released 2021.11. Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-24. This document is not subject to copyright and is in the public domain.
    </p>
    <h1 id="t24">
     <b>
@@ -7577,11 +7577,13 @@
        P.L. 2021, ch. 194, § 1, and
        P.L. 2021, ch. 195, § 1 enacted identical amendments to this section.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t24c06s24-6-1-severability">
        <b>
         Severability.
        </b>
-      </p>
+      </h4>
       <p>
        P.L. 2014, ch. 46, § 2 provides: “If any provision of this act, or the application thereof, to the town of Barrington, or to any person or circumstances, is deemed invalid for any reason, the remainder of this act, or the application of such provision to said town or other persons or circumstances, shall not be affected thereby and, to this end, the provisions of this act are declared to be severable.”
       </p>
@@ -11760,11 +11762,13 @@
        P.L. 2021, ch. 49, § 1, and
        P.L. 2021, ch. 50, § 1 enacted identical amendments to this section.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t24c10s24-10-17-applicability">
        <b>
         Applicability.
        </b>
-      </p>
+      </h4>
       <p>
        P.L. 2008, ch. 100, art. 12, § 19 provides that the amendment to this section by that act takes effect July 1, 2008, and shall apply to all offenses committed on July 1, 2008 and thereafter.
       </p>
@@ -11801,11 +11805,13 @@
        P.L. 2021, ch. 49, § 1, and
        P.L. 2021, ch. 50, § 1 enacted identical amendments to this section.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t24c10s24-10-18-applicability">
        <b>
         Applicability.
        </b>
-      </p>
+      </h4>
       <p>
        P.L. 2008, ch. 100, art. 12, § 19 provides that the amendment to this section by that act takes effect July 1, 2008, and shall apply to all offenses committed on July 1, 2008 and thereafter.
       </p>
@@ -11847,11 +11853,13 @@
       <p>
        P.L. 2000, ch. 223, § 1; P.L. 2006, ch. 216, § 63; P.L. 2008, ch. 100, art. 12, § 4.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t24c10s24-10-20-applicability">
        <b>
         Applicability.
        </b>
-      </p>
+      </h4>
       <p>
        P.L. 2008, ch. 100, art. 12, § 19 provides that the amendment to this section by that act takes effect July 1, 2008, and shall apply to all offenses committed on July 1, 2008 and thereafter.
       </p>
