--- a/transforms/ri/ocri/r70/gov.ri.code.title.29.html
+++ b/transforms/ri/ocri/r70/gov.ri.code.title.29.html
@@ -10,12 +10,12 @@
   <meta content="1504.84" name="CocoaVersion" />
   <link href="https://unicourt.github.io/cic-code-ga/transforms/ga/stylesheet/ga_code_stylesheet.css" rel="stylesheet" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
-  <meta content="Release 70 of the Official Code of Rhode Island Annotated released 2021.11.Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-23.This document is not subject to copyright and is in the public domain. " name="description" />
+  <meta content="Release 70 of the Official Code of Rhode Island Annotated released 2021.11.Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-24.This document is not subject to copyright and is in the public domain. " name="description" />
  </head>
  <body>
   <nav>
    <p class="transformation">
-    Release 70 of the Official Code of Rhode Island Annotated released 2021.11. Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-23. This document is not subject to copyright and is in the public domain.
+    Release 70 of the Official Code of Rhode Island Annotated released 2021.11. Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-24. This document is not subject to copyright and is in the public domain.
    </p>
    <h1 id="t29">
     <b>
@@ -2312,22 +2312,16 @@
      </p>
      <div>
       <h3 id="t29c05s29-5-1aI">
-       ARTICLE I
+       ARTICLE I. Policy and Purpose
       </h3>
-      <p>
-       Policy and Purpose
-      </p>
       <p>
        Because the desire for the services provided by libraries transcends governmental boundaries and can most effectively be satisfied by giving such services to communities and people regardless of jurisdictional lines, it is the policy of the states party to this compact to cooperate and share their responsibilities; to authorize cooperation and sharing with respect to those types of library facilities and services which can be more economically or efficiently developed and maintained on a cooperative basis, and to authorize cooperation and sharing among localities, states and others in providing joint or cooperative library services in areas where the distribution of population or of existing and potential library resources make the provision of library service on an interstate basis the most effective way of providing adequate and efficient service.
       </p>
      </div>
      <div>
       <h3 id="t29c05s29-5-1aII">
-       ARTICLE II
+       ARTICLE II. Definitions
       </h3>
-      <p>
-       Definitions
-      </p>
       <p>
        As used in this compact:
       </p>
@@ -2345,11 +2339,8 @@
      </div>
      <div>
       <h3 id="t29c05s29-5-1aIII">
-       ARTICLE III
+       ARTICLE III. Interstate Library Districts
       </h3>
-      <p>
-       Interstate Library Districts
-      </p>
       <ol type="a">
        <li id="t29c05s29-5-1aIIIol1a">
         Any one or more public library agencies in a party state in cooperation with any public library agency or agencies in one or more other party states may establish and maintain an interstate library district. Subject to the provisions of this compact and any other laws of the party states which pursuant hereto remain applicable, such district may establish, maintain and operate some or all of the library facilities and services for the area concerned in accordance with the terms of a library agreement therefor. Any private library agencies or agencies within an interstate library district may cooperate therewith, assume duties, responsibilities and obligations thereto, and receive benefits therefrom as provided in any library agreement to which such agency or agencies become party.
@@ -2390,11 +2381,8 @@
      </div>
      <div>
       <h3 id="t29c05s29-5-1aIV">
-       ARTICLE IV
+       ARTICLE IV. Interstate Library Districts, Governing Board
       </h3>
-      <p>
-       Interstate Library Districts, Governing Board
-      </p>
       <ol type="a">
        <li id="t29c05s29-5-1aIVol1a">
         An interstate library district which establishes, maintains or operates any facilities or services in its own right shall have a governing board which shall direct the affairs of the district and act for it in all matters relating to its business. Each participating public library agency in the district shall be represented on the governing board which shall be organized and conduct its business in accordance with provisions therefor in the library agreement. But in no event shall a governing board meet less often than twice a year.
@@ -2406,22 +2394,16 @@
      </div>
      <div>
       <h3 id="t29c05s29-5-1aV">
-       ARTICLE V
+       ARTICLE V. State Library Agency Cooperation
       </h3>
-      <p>
-       State Library Agency Cooperation
-      </p>
       <p>
        Any two or more state library agencies of two or more of the party states may undertake and conduct joint or cooperative library programs, render joint or cooperative library services, and enter into and perform arrangements for the cooperative or joint acquisition, use, housing and disposition of items or collections of materials which, by reason of expense, rarity, specialized nature, or infrequency of demand therefor would be appropriate for central collection and shared use. Any such programs, services or arrangements may include provision for the exercise on a cooperative or joint basis of any power exercisable by an interstate library district and an agreement embodying any such program, service or arrangement shall contain provisions covering the subjects detailed in article VI of this compact for interstate library.
       </p>
      </div>
      <div>
       <h3 id="t29c05s29-5-1aVI">
-       ARTICLE VI
+       ARTICLE VI. Library Agreements
       </h3>
-      <p>
-       Library Agreements
-      </p>
       <ol type="a">
        <li id="t29c05s29-5-1aVIol1a">
         In order to provide for any joint or cooperative undertaking pursuant to this compact, public and private library agencies may enter into library agreements. Any agreement executed pursuant to the provisions of this compact shall, as among the parties to the agreement:
@@ -2450,11 +2432,8 @@
      </div>
      <div>
       <h3 id="t29c05s29-5-1aVII">
-       ARTICLE VII
+       ARTICLE VII. Approval of Library Agreements
       </h3>
-      <p>
-       Approval of Library Agreements
-      </p>
       <ol type="a">
        <li id="t29c05s29-5-1aVIIol1a">
         Every library agreement made pursuant to this compact shall, prior to and as a condition precedent to its entry into force, be submitted to the attorney general of each state in which a public library agency party thereto is situated, who shall determine whether the agreement is in proper form and compatible with the laws of his or her state. The attorneys general shall approve any agreement submitted to them unless they shall find that it does not meet the conditions set forth herein and shall detail in writing addressed to the governing bodies of the public library agencies concerned the specific respects in which the proposed agreement fails to meet the requirements of law. Failure to disapprove an agreement submitted thereunder within ninety (90) days of its submission shall constitute approval thereof.
@@ -2466,22 +2445,16 @@
      </div>
      <div>
       <h3 id="t29c05s29-5-1aVIII">
-       ARTICLE VIII
+       ARTICLE VIII. Other Laws Applicable
       </h3>
-      <p>
-       Other Laws Applicable
-      </p>
       <p>
        Nothing in this compact or in any library agreement shall be construed to supersede, alter or otherwise impair any obligation imposed on any library by otherwise applicable law, nor to authorize the transfer or disposition of any property held in trust by a library agency in a manner contrary to the terms of such trust.
       </p>
      </div>
      <div>
       <h3 id="t29c05s29-5-1aIX">
-       ARTICLE IX
+       ARTICLE IX. Appropriations and Aid
       </h3>
-      <p>
-       Appropriations and Aid
-      </p>
       <ol type="a">
        <li id="t29c05s29-5-1aIXol1a">
         Any public library agency party to a library agreement may appropriate funds to the interstate library district established thereby in the same manner and to the same extent as to a library wholly maintained by it and, subject to the laws of the state in which such public library agency is situated, may pledge its credit in support of an interstate library district established by the agreement.
@@ -2493,22 +2466,16 @@
      </div>
      <div>
       <h3 id="t29c05s29-5-1aX">
-       ARTICLE X
+       ARTICLE X. Compact Administrator
       </h3>
-      <p>
-       Compact Administrator
-      </p>
       <p>
        Each state shall designate a compact administrator with whom copies of all library agreements to which his or her state or any public library agency thereof is party shall be filed. The administrator shall have such other powers as may be conferred upon him by the laws of his state and may consult and cooperate with the compact administrators of other party states and take such steps as may effectuate the purposes of this compact. If the laws of a party state so provide, such state may designate one or more deputy compact administrators in addition to its compact administrator.
       </p>
      </div>
      <div>
       <h3 id="t29c05s29-5-1aXI">
-       ARTICLE XI
+       ARTICLE XI. Entry into Force and Withdrawal
       </h3>
-      <p>
-       Entry into Force and Withdrawal
-      </p>
       <ol type="a">
        <li id="t29c05s29-5-1aXIol1a">
         This compact shall enter into force and effect immediately upon its enactment into law by any two (2) states. Thereafter, it shall enter into force and effect as to any other state upon the enactment thereof by such state.
@@ -2520,11 +2487,8 @@
      </div>
      <div>
       <h3 id="t29c05s29-5-1aXII">
-       ARTICLE XII
+       ARTICLE XII. Construction and Severability
       </h3>
-      <p>
-       Construction and Severability
-      </p>
       <p>
        This compact shall be liberally construed so as to effectuate the purposes thereof. The provisions of this compact shall be severable and if any phrase, clause, sentence or provision of this compact is declared to be contrary to the constitution of any party state or of the United States or the applicability thereof to any government, agency, person or circumstance is held invalid, the validity of the remainder of this compact and the applicability thereof to any government, agency, person or circumstance shall not be affected thereby. If this compact shall be held contrary to the constitution of any state party thereto, the compact shall remain in full force and effect as to the remaining states and in full force and effect as to the state affected as to all severable matters.
       </p>
@@ -3665,11 +3629,13 @@
       <p>
        P.L. 1985, ch. 196, § 2; P.L. 1997, ch. 101, § 1.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t29c07s29-7-4-transferredsections">
        <b>
         Transferred Sections.
        </b>
-      </p>
+      </h4>
       <p>
        The former section (P.L. 1983, ch. 254, § 1), concerning deposits of state publications, was redesignated as §
        <cite class="ocri">
@@ -3701,11 +3667,13 @@
        </cite>
        ; P.L. 1985, ch. 196, § 2; P.L. 2008, ch. 133, § 1; P.L. 2008, ch. 167, § 1.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t29c07s29-7-5-transferredsections">
        <b>
         Transferred Sections.
        </b>
-      </p>
+      </h4>
       <p>
        The former section (P.L. 1983, ch. 254, § 1), concerning library agreements, was redesignated as §
        <cite class="ocri">
@@ -3737,11 +3705,13 @@
        </cite>
        ; P.L. 1985, ch. 196, § 2.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t29c07s29-7-6-transferredsections">
        <b>
         Transferred Sections.
        </b>
-      </p>
+      </h4>
       <p>
        The former section (P.L. 1983, ch. 254, § 1), concerning lists of state publications, was redesignated as §
        <cite class="ocri">
