--- a/transforms/ri/ocri/r70/gov.ri.code.title.32.html
+++ b/transforms/ri/ocri/r70/gov.ri.code.title.32.html
@@ -10,12 +10,12 @@
   <meta content="1504.84" name="CocoaVersion" />
   <link href="https://unicourt.github.io/cic-code-ga/transforms/ga/stylesheet/ga_code_stylesheet.css" rel="stylesheet" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
-  <meta content="Release 70 of the Official Code of Rhode Island Annotated released 2021.11.Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-23.This document is not subject to copyright and is in the public domain. " name="description" />
+  <meta content="Release 70 of the Official Code of Rhode Island Annotated released 2021.11.Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-24.This document is not subject to copyright and is in the public domain. " name="description" />
  </head>
  <body>
   <nav>
    <p class="transformation">
-    Release 70 of the Official Code of Rhode Island Annotated released 2021.11. Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-23. This document is not subject to copyright and is in the public domain.
+    Release 70 of the Official Code of Rhode Island Annotated released 2021.11. Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-24. This document is not subject to copyright and is in the public domain.
    </p>
    <h1 id="t32">
     <b>
@@ -235,20 +235,24 @@
      <h3 id="t32c01s32-1-1">
       32-1-1.  [Superseded.]
      </h3>
-     <p>
-      <b>
-       Superseded Sections.
-      </b>
-     </p>
-     <p>
-      This section (P.L. 1952, ch. 2973, § 1) is superseded by §
-      <cite class="ocri">
-       <a href="gov.ri.code.title.42.html#t42c17.1s42-17.1-4" target="_blank">
-        42-17.1-4
-       </a>
-      </cite>
-      .
-     </p>
+     <div>
+      <h4 id="t32c01s32-1-1-supersededsections">
+       <b>
+        Superseded Sections.
+       </b>
+      </h4>
+      <p>
+       This section (P.L. 1952, ch. 2973, § 1) is superseded by §
+       <cite class="ocri">
+        <a href="gov.ri.code.title.42.html#t42c17.1s42-17.1-4" target="_blank">
+         42-17.1-4
+        </a>
+       </cite>
+       .
+      </p>
+     </div>
+    </div>
+    <div>
      <h3 id="t32c01s32-1-2">
       32-1-2.  Transfer of authority from department of agriculture and conservation.
      </h3>
