--- a/transforms/ri/ocri/r70/gov.ri.code.title.33.html
+++ b/transforms/ri/ocri/r70/gov.ri.code.title.33.html
@@ -10,12 +10,12 @@
   <meta content="1504.84" name="CocoaVersion" />
   <link href="https://unicourt.github.io/cic-code-ga/transforms/ga/stylesheet/ga_code_stylesheet.css" rel="stylesheet" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
-  <meta content="Release 70 of the Official Code of Rhode Island Annotated released 2021.11.Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-23.This document is not subject to copyright and is in the public domain. " name="description" />
+  <meta content="Release 70 of the Official Code of Rhode Island Annotated released 2021.11.Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-24.This document is not subject to copyright and is in the public domain. " name="description" />
  </head>
  <body>
   <nav>
    <p class="transformation">
-    Release 70 of the Official Code of Rhode Island Annotated released 2021.11. Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-23. This document is not subject to copyright and is in the public domain.
+    Release 70 of the Official Code of Rhode Island Annotated released 2021.11. Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-24. This document is not subject to copyright and is in the public domain.
    </p>
    <h1 id="t33">
     <b>
@@ -3146,13 +3146,7 @@
        History of Section.
       </h4>
       <p>
-       C.P.A. 1905, § 943; G.L. 1909, ch. 316, § 11; G.L. 1923, ch. 367, § 11; G.L. 1938, ch. 567, § 11; G.L. 1956, §
-       <cite class="ocri">
-        <a href="#t33c03s33-3-3" target="_self">
-         33-3-3
-        </a>
-       </cite>
-       -2.
+       C.P.A. 1905, § 943; G.L. 1909, ch. 316, § 11; G.L. 1923, ch. 367, § 11; G.L. 1938, ch. 567, § 11; G.L. 1956, § 33-3-3-2.
       </p>
      </div>
     </div>
@@ -3352,11 +3346,13 @@
        </cite>
        .
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t33c03s33-3-5-compilersnotes">
        <b>
         Compiler's Notes
        </b>
-      </p>
+      </h4>
       <p>
        In 2021, “AND PROVIDENCE PLANTATIONS” was deleted following “STATE OF RHODE ISLAND” in this section at the direction of the Law Revision Director to reflect the 2020 amendments to the state constitution that changed the state’s name.
       </p>
@@ -16842,11 +16838,13 @@
        P.L. 2013, ch. 186, § 1, and
        P.L. 2013, ch. 236, § 1 enacted identical amendments to this section.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t33c11s33-11-5.1-applicability">
        <b>
         Applicability.
        </b>
-      </p>
+      </h4>
       <p>
        P.L. 2013, ch. 186, § 2, provides that the amendment to this section by that act shall take effect July 11, 2013, and shall apply to all pending and future petitions.
       </p>
@@ -20463,11 +20461,13 @@
        </cite>
        ; P.L. 1962, ch. 127, § 1; P.L. 2001, ch. 221, § 1.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t33c12s33-12-6-applicability">
        <b>
         Applicability.
        </b>
-      </p>
+      </h4>
       <p>
        P.L. 2001, ch. 221, § 2 provides that the amendment to this section by that Act shall take effect upon passage [July 13, 2001], and shall only apply to wills admitted to probate after that date.
       </p>
@@ -26863,11 +26863,13 @@
       <p>
        P.L. 2017, ch. 225, § 1, and P.L. 2017, ch. 244, § 1 enacted identical versions of this section.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t33c15s33-15-18.1-applicability">
        <b>
         Applicability.
        </b>
-      </p>
+      </h4>
       <p>
        P.L. 2017, ch. 225, § 2 provides: “This act shall take effect upon passage [July 18, 2017] and shall apply to limited guardianships, guardianships, or conservatorships created before, on, or after the effective date of this act.”
       </p>
@@ -42963,11 +42965,13 @@
        </cite>
        ; P.L. 2004, ch. 573, § 2.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t33c22s33-22-17-applicability">
        <b>
         Applicability.
        </b>
-      </p>
+      </h4>
       <p>
        P.L. 2004, ch. 573, § 5 provides that the amendment to this section by that act takes effect upon passage [July 9, 2004] and shall apply to all actions involving trusts and trustees commenced after that date.
       </p>
@@ -48213,11 +48217,13 @@
       <p>
        P.L. 2018, ch. 149, § 1, and P.L. 2018, ch. 235, § 1 enacted identical amendments to this section.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t33c28s33-28-1-applicability">
        <b>
         Applicability.
        </b>
-      </p>
+      </h4>
       <p>
        P.L. 2018, ch. 149, § 2, provides: “This act shall take effect upon passage [July 2, 2018] and shall apply to the estates of decedents dying on and after July 1, 2018.”
       </p>
