--- a/transforms/ri/ocri/r70/gov.ri.code.title.34.html
+++ b/transforms/ri/ocri/r70/gov.ri.code.title.34.html
@@ -10,12 +10,12 @@
   <meta content="1504.84" name="CocoaVersion" />
   <link href="https://unicourt.github.io/cic-code-ga/transforms/ga/stylesheet/ga_code_stylesheet.css" rel="stylesheet" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
-  <meta content="Release 70 of the Official Code of Rhode Island Annotated released 2021.11.Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-23.This document is not subject to copyright and is in the public domain. " name="description" />
+  <meta content="Release 70 of the Official Code of Rhode Island Annotated released 2021.11.Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-24.This document is not subject to copyright and is in the public domain. " name="description" />
  </head>
  <body>
   <nav>
    <p class="transformation">
-    Release 70 of the Official Code of Rhode Island Annotated released 2021.11. Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-23. This document is not subject to copyright and is in the public domain.
+    Release 70 of the Official Code of Rhode Island Annotated released 2021.11. Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-24. This document is not subject to copyright and is in the public domain.
    </p>
    <h1 id="t34">
     <b>
@@ -2259,11 +2259,13 @@
        </cite>
        ; P.L. 2006, ch. 368, § 1; P.L. 2006, ch. 464, § 1.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t34c04s34-4-20-compilersnotes">
        <b>
         Compiler's Notes
        </b>
-      </p>
+      </h4>
       <p>
        In 2021, “and Providence Plantations” was deleted following “devise to the state” in this section at the direction of the Law Revision Director to reflect the 2020 amendments to the state constitution that changed the state’s name.
       </p>
@@ -2803,11 +2805,13 @@
       <p>
        P.L. 2016, ch. 58, § 1, and P.L. 2016, ch. 59, § 1 enacted identical versions of this section.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t34c04s34-4-30-applicability">
        <b>
         Applicability.
        </b>
-      </p>
+      </h4>
       <p>
        P.L. 2016, ch. 58, § 2 provides that this section takes effect upon passage [June 8, 2016], and applies retroactively to prior deeds from and to a nominee trust.
       </p>
@@ -10185,11 +10189,13 @@
       <p>
        P.L. 2014, ch. 272, § 1, and P.L. 2014, ch. 324, § 1 enacted identical amendments to this section.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t34c11s34-11-22-applicability">
        <b>
         Applicability.
        </b>
-      </p>
+      </h4>
       <p>
        P.L. 2003, ch. 233, § 3, provides that the amendment to this section by that act takes effect on November 1, 2003, and that the minimum thirty day notice requirement for individual consumer mortgagors shall be applicable only with regard to notices mailed to those mortgagors on and after November 1, 2003.
       </p>
@@ -11276,11 +11282,13 @@
       <p>
        P.L. 2016, ch. 113, § 1, and P.L. 2016, ch. 122, § 1 enacted identical versions of this section.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t34c11s34-11-43-applicability">
        <b>
         Applicability.
        </b>
-      </p>
+      </h4>
       <p>
        P.L. 2016, ch. 113, § 2, provides that this section takes effect upon passage [June 22, 2016] and shall apply to all deeds with the words “special warranty” in their title, and/or the words “special warranty covenants” in the body thereof.
       </p>
@@ -11313,11 +11321,13 @@
       <p>
        P.L. 2016, ch. 113, § 1, and P.L. 2016, ch. 122, § 1 enacted identical versions of this section.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t34c11s34-11-44-applicability">
        <b>
         Applicability.
        </b>
-      </p>
+      </h4>
       <p>
        P.L. 2016, ch. 113, § 2, provides that this section takes effect upon passage [June 22, 2016] and shall apply to all deeds with the words “special warranty” in their title, and/or the words “special warranty covenants” in the body thereof.
       </p>
@@ -19117,11 +19127,13 @@
        P.L. 2021, ch. 210, § 1, and
        P.L. 2021, ch. 323, § 1 enacted identical amendments to this section.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t34c18s34-18-22-delayedeffectivedates">
        <b>
         Delayed Effective Dates.
        </b>
-      </p>
+      </h4>
       <p>
        P.L. 2021, ch. 210, § 2, provides that the amendment to this section by that act takes effect on January 1, 2022.
       </p>
@@ -30956,11 +30968,13 @@
       <p>
        P.L. 2018, ch. 72, § 3, and P.L. 2018, ch. 73, § 2 enacted identical amendments to this section.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t34c27s34-27-3.2-sunsetprovision">
        <b>
         Sunset Provision.
        </b>
-      </p>
+      </h4>
       <p>
        P.L. 2013, ch. 325, § 2, as amended by P.L. 2018, ch. 72, § 1 and P.L. 2018, ch. 73, § 1, provides that this section takes effect sixty (60) days following passage [July 15, 2013] and shall expire on July 1, 2023.
       </p>
@@ -31080,11 +31094,13 @@
       <p>
        P.L. 2012, ch. 161, § 1, and P.L. 2012, ch. 177, § 1 enacted identical amendments to this section.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t34c27s34-27-4-applicability">
        <b>
         Applicability.
        </b>
-      </p>
+      </h4>
       <p>
        P.L. 2003, ch. 233, § 3, provides that the amendment to this section by that act takes effect on November 1, 2003, and the minimum thirty day notice requirement for individual consumer mortgagors shall be applicable only with regard to notices mailed to those mortgagors on and after November 1, 2003.
       </p>
@@ -31253,11 +31269,13 @@
       <p>
        P.L. 2017, ch. 170, § 1, and P.L. 2017, ch. 173, § 1 enacted identical amendments to this section.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t34c27s34-27-6-applicability">
        <b>
         Applicability.
        </b>
-      </p>
+      </h4>
       <p>
        P.L. 2008, ch. 238, § 3, provides that this section takes effect sixty (60) days after passage and shall apply to foreclosure auction sales occurring after the date on which section 1 takes effect [July 4, 2008].
       </p>
@@ -47849,11 +47867,13 @@
        P.L. 2021, ch. 211, § 2;
        P.L. 2021, ch. 322, § 2 ) as passed by the 2021 General Assembly. Since the acts are not in conflict with each other, the section is set out as amended by all four acts.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t34c37s34-37-4.01-delayedeffectivedates">
        <b>
         Delayed Effective Dates.
        </b>
-      </p>
+      </h4>
       <p>
        P.L. 2021, ch. 211, § 3, provides that the amendment to this section by that act takes effect on January 1, 2022.
       </p>
@@ -55819,11 +55839,13 @@
        </cite>
        ; P.L. 1994, ch. 162, § 1; repealed by P.L. 2021, ch. 102, § 2, effective July 1, 2021; repealed by P.L. 2021, ch. 103, § 2, effective July 1, 2021.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t34c46s34-46-7-compilersnotes">
        <b>
         Compiler's Notes
        </b>
-      </p>
+      </h4>
       <p>
        Former §
        <cite class="ocri">
@@ -56049,11 +56071,13 @@
       <p>
        P.L. 2013, ch. 69, § 1, and P.L. 2013, ch. 76, § 1 enacted identical versions of this chapter.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t34c49s34-49-1-applicability">
        <b>
         Applicability.
        </b>
-      </p>
+      </h4>
       <p>
        P.L. 2013, ch. 69, § 2, provides that this chapter takes effect upon passage [June 7, 2013] and shall apply to claims for compensation based on written instruments executed on or subsequent to the effective date.
       </p>
