--- a/transforms/ri/ocri/r70/gov.ri.code.title.35.html
+++ b/transforms/ri/ocri/r70/gov.ri.code.title.35.html
@@ -10,12 +10,12 @@
   <meta content="1504.84" name="CocoaVersion" />
   <link href="https://unicourt.github.io/cic-code-ga/transforms/ga/stylesheet/ga_code_stylesheet.css" rel="stylesheet" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
-  <meta content="Release 70 of the Official Code of Rhode Island Annotated released 2021.11.Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-23.This document is not subject to copyright and is in the public domain. " name="description" />
+  <meta content="Release 70 of the Official Code of Rhode Island Annotated released 2021.11.Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-24.This document is not subject to copyright and is in the public domain. " name="description" />
  </head>
  <body>
   <nav>
    <p class="transformation">
-    Release 70 of the Official Code of Rhode Island Annotated released 2021.11. Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-23. This document is not subject to copyright and is in the public domain.
+    Release 70 of the Official Code of Rhode Island Annotated released 2021.11. Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-24. This document is not subject to copyright and is in the public domain.
    </p>
    <h1 id="t35">
     <b>
@@ -4805,19 +4805,23 @@
       <p>
        P.L. 2014, ch. 191, § 2 provides: “The provision relating to the Job Development Fund shall take effect on July 1, 2014, notwithstanding the provision of Article 3, Section 4 of 2014 H-7133 Substitute A, entitled ‘An Act Making Appropriations for the Support of the State for the Fiscal Year Ending June 30, 2015.’ The remainder of the act shall take effect on January 1, 2014.”
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t35c04s35-4-27-retroactiveeffectivedates">
        <b>
         Retroactive Effective Dates.
        </b>
-      </p>
+      </h4>
       <p>
        P.L. 2012, ch. 241, art. 14, § 3 provides that the amendments to this section by that act shall take effect upon passage [June 15, 2012] and be retroactive to July 1, 2011.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t35c04s35-4-27-applicability">
        <b>
         Applicability.
        </b>
-      </p>
+      </h4>
       <p>
        P.L. 2010, ch. 23, art. 8, § 10, provides that the amendment to this section by that act takes effect upon passage [June 12, 2010] and shall apply retroactively to July 1, 2009.
       </p>
@@ -5661,11 +5665,13 @@
        </cite>
        ; P.L. 1968, ch. 99, § 2; P.L. 1986, ch. 287, art. 23, § 1; P.L. 1990, ch. 247, § 1; P.L. 1996, ch. 100, art. 10, § 6; P.L. 2004, ch. 595, art. 45, § 6; P.L. 2007, ch. 73, art. 8, § 2; P.L. 2009, ch. 5, art. 10, § 6; P.L. 2009, ch. 68, art. 7, § 12; P.L. 2010, ch. 9, § 5; P.L. 2010, ch. 10, § 5; P.L. 2014, ch. 145, art. 9, § 1; P.L. 2015, ch. 141, art. 13, § 2; P.L. 2019, ch. 88, art. 4, § 10.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t35c06s35-6-1-retroactiveeffectivedates">
        <b>
         Retroactive Effective Dates.
        </b>
-      </p>
+      </h4>
       <p>
        P.L. 2015, ch. 141, art. 13, § 3, provides that the amendment to this section by that act takes effect July 1, 2014.
       </p>
@@ -9430,11 +9436,13 @@
       <p>
        P.L. 1987, ch. 12, § 1; P.L. 1997, ch. 30, art. 2, § 4.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t35c8.1s35-8.1-3-compilersnotes">
        <b>
         Compiler's Notes
        </b>
-      </p>
+      </h4>
       <p>
        In 2021, “and Providence Plantations” was deleted following “state of Rhode Island” in this section at the direction of the Law Revision Director to reflect the 2020 amendments to the state constitution that changed the state’s name.
       </p>
