--- a/transforms/ri/ocri/r70/gov.ri.code.title.36.html
+++ b/transforms/ri/ocri/r70/gov.ri.code.title.36.html
@@ -10,12 +10,12 @@
   <meta content="1504.84" name="CocoaVersion" />
   <link href="https://unicourt.github.io/cic-code-ga/transforms/ga/stylesheet/ga_code_stylesheet.css" rel="stylesheet" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
-  <meta content="Release 70 of the Official Code of Rhode Island Annotated released 2021.11.Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-23.This document is not subject to copyright and is in the public domain. " name="description" />
+  <meta content="Release 70 of the Official Code of Rhode Island Annotated released 2021.11.Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-24.This document is not subject to copyright and is in the public domain. " name="description" />
  </head>
  <body>
   <nav>
    <p class="transformation">
-    Release 70 of the Official Code of Rhode Island Annotated released 2021.11. Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-23. This document is not subject to copyright and is in the public domain.
+    Release 70 of the Official Code of Rhode Island Annotated released 2021.11. Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-24. This document is not subject to copyright and is in the public domain.
    </p>
    <h1 id="t36">
     <b>
@@ -10060,11 +10060,13 @@
        P.L. 2011, ch. 408, § 2, and
        P.L. 2011, ch. 409, § 2 enacted identical amendments to this section.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t36c08s36-8-1-severability">
        <b>
         Severability.
        </b>
-      </p>
+      </h4>
       <p>
        P.L. 1998, ch. 411, § 4 provides that if any provision of that act or the application thereof to any person or circumstances is held invalid, that invalidity shall not affect other provisions or applications which can be given effect without the invalid provisions or applications.
       </p>
@@ -12218,11 +12220,13 @@
       <p>
        P.L. 2019, ch. 171, § 1, and P.L. 2019, ch. 233, § 1 enacted identical amendments to this section.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t36c09s36-9-20-severability">
        <b>
         Severability.
        </b>
-      </p>
+      </h4>
       <p>
        P.L. 1998, ch. 70, § 4 and P.L. 1998, ch. 291, § 4 each declares the provisions of the respective act severable, so that if any provision of the act or the application thereof to any person or circumstances is held invalid, that invalidity shall not affect other provisions or applications of the act, which can be given effect without the invalid provisions or application.
       </p>
@@ -14550,11 +14554,13 @@
       <p>
        P.L. 2011, ch. 408, § 7, and P.L. 2011, ch. 409, § 7 enacted identical amendments to this section.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t36c10s36-10-8-applicability">
        <b>
         Applicability.
        </b>
-      </p>
+      </h4>
       <p>
        Section 2 of P.L. 1999, ch. 344 and Section 2 of P.L. 1999, ch. 356 both provide that the amendment to this section by those acts shall take effect on July 2, 1999, shall apply to any demand for refund of contributions and any demand for interest on previously refunded contributions made subsequent to February 2, 1999.
       </p>
@@ -15921,11 +15927,13 @@
       <p>
        P.L. 2011, ch. 408, § 7, and P.L. 2011, ch. 409, § 7 enacted identical amendments to this section.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t36c10s36-10-10.4-applicability">
        <b>
         Applicability.
        </b>
-      </p>
+      </h4>
       <p>
        Section 7 of P.L. 1991, ch. 129 and section 7 of P.L. 1991, ch. 174 both provide that the provisions of §§
        <cite class="ocri">
@@ -15941,11 +15949,13 @@
        </cite>
        , inclusive, regarding state mandated costs shall not apply to the enactment of this section by each Act, and that this section shall not be deemed to be state mandated cost.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t36c10s36-10-10.4-severability">
        <b>
         Severability.
        </b>
-      </p>
+      </h4>
       <p>
        Section 10 of P.L. 1994, ch. 139 provides: “If any provision of this act or the application thereof to any person or circumstances is held invalid, such invalidity shall not affect other provisions or applications of the act which can be given effect without the invalid provision or application, and to this end the provisions of this act are declared to be severable.”
       </p>
@@ -16860,11 +16870,13 @@
        </cite>
        ; P.L. 1985, ch. 496, art. 3, § 1.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t36c10s36-10-32-legislativeintent">
        <b>
         Legislative Intent.
        </b>
-      </p>
+      </h4>
       <p>
        Sections 2 and 3 of P.L. 1985, ch. 496, art. III contain legislative findings and intent regarding the purpose and severability of the 1985 amendment to this section by that Act.
       </p>
@@ -17918,11 +17930,13 @@
       <p>
        P.L. 1992, ch. 306, art. 1, § 8; P.L. 1995, ch. 212, § 1; P.L. 1996, ch. 292, § 2; P.L. 2007, ch. 510, § 13.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t36c10.1s36-10.1-3-applicability">
        <b>
         Applicability.
        </b>
-      </p>
+      </h4>
       <p>
        Section 3 of P.L. 1996, ch. 292, provides: “This act shall take effect upon passage [August 6, 1996] and shall be applied only to those offenses which occur after the date of the passage of this act.”
       </p>
@@ -18190,11 +18204,13 @@
       <p>
        P.L. 2014, ch. 497, § 1; P.L. 2014, ch. 526, § 1.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t36c10.1s36-10.1-5-applicability">
        <b>
         Applicability.
        </b>
-      </p>
+      </h4>
       <p>
        P.L. 2014, ch. 497, § 2, provides that this section takes effect upon passage [July 8, 2014] and shall apply to all pending
        proceedings under any municipal ordinance as provided herein.
@@ -20688,11 +20704,13 @@
       <p>
        P.L. 2008, ch. 9, art. 4, § 4 provides: “This article shall take effect upon passage [May 1, 2008]. Provided, however, that the terms of the collective bargaining agreements in place with the Rhode Island Airport Corporation in existence on the effective date of this act which provide a different or greater level of benefits than provided herein shall remain in full force and effect until their presently scheduled expiration dates. However, the establishment of the Rhode Island State Employees’ and Electing Teachers OPEB System Trust shall occur after July 1, 2008.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t36c12s36-12-4-legislativeintent">
        <b>
         Legislative Intent.
        </b>
-      </p>
+      </h4>
       <p>
        Section 3 of P.L. 1989, ch. 227 provides that an employee who retires in accordance with chapter 126 of the 1989 Public Laws shall be entitled to the benefits set forth in §§
        <cite class="ocri">
