--- a/transforms/ri/ocri/r70/gov.ri.code.title.37.html
+++ b/transforms/ri/ocri/r70/gov.ri.code.title.37.html
@@ -10,12 +10,12 @@
   <meta content="1504.84" name="CocoaVersion" />
   <link href="https://unicourt.github.io/cic-code-ga/transforms/ga/stylesheet/ga_code_stylesheet.css" rel="stylesheet" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
-  <meta content="Release 70 of the Official Code of Rhode Island Annotated released 2021.11.Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-23.This document is not subject to copyright and is in the public domain. " name="description" />
+  <meta content="Release 70 of the Official Code of Rhode Island Annotated released 2021.11.Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-24.This document is not subject to copyright and is in the public domain. " name="description" />
  </head>
  <body>
   <nav>
    <p class="transformation">
-    Release 70 of the Official Code of Rhode Island Annotated released 2021.11. Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-23. This document is not subject to copyright and is in the public domain.
+    Release 70 of the Official Code of Rhode Island Annotated released 2021.11. Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-24. This document is not subject to copyright and is in the public domain.
    </p>
    <h1 id="t37">
     <b>
@@ -6373,11 +6373,13 @@
       <p>
        P.L. 2013, ch. 173, § 2, and P.L. 2013, ch. 225, § 2 enacted identical versions of this chapter.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t37c2.5s37-2.5-1-applicability">
        <b>
         Applicability.
        </b>
-      </p>
+      </h4>
       <p>
        P.L. 2013, ch. 173, § 3, provides that the enactment of this chapter by that act takes effect on July 11, 2013 but shall apply to contracts awarded or renewed commencing thirty (30) days after the effective date of this act.
       </p>
@@ -10380,11 +10382,13 @@
        </cite>
        ; P.L. 1962, ch. 9, § 1; P.L. 1968, ch. 257, § 1; P.L. 1989, ch. 555, § 4; P.L. 1994, ch. 258, § 1; P.L. 2003, ch. 260, § 1; P.L. 2003, ch. 275, § 1; P.L. 2011, ch. 363, § 36.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t37c06s37-6-23-applicability">
        <b>
         Applicability.
        </b>
-      </p>
+      </h4>
       <p>
        P.L. 2003, ch. 260, § 3 provides that the amendment to this section by that act takes effect upon passage [July 17, 2003] and shall apply retroactively to the calculation of interest on condemnation awards and shall be used for calculating interest on condemnation awards for any period from and after February 28, 2001, and the rate of interest for periods prior to February 28, 2001, shall continue to be calculated in the same manner as before this amendment.
       </p>
@@ -15163,11 +15167,13 @@
        </cite>
        ; P.L. 1960, ch. 201, § 1; P.L. 1961, ch. 183, § 1), concerning notices, was repealed by P.L. 1973, ch. 216, § 1.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t37c12s37-12-10-applicability">
        <b>
         Applicability.
        </b>
-      </p>
+      </h4>
       <p>
        P.L. 2018, ch. 170, § 4 provides: “Notwithstanding any general or special law to the contrary, this act shall not apply to a contract for construction relating to a project for which the owner’s contract was entered into prior to the effective date of this act [July 2, 2018].”
       </p>
@@ -15275,11 +15281,13 @@
       <p>
        P.L. 2018, ch. 170, § 3.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t37c12s37-12-10.1-applicability">
        <b>
         Applicability.
        </b>
-      </p>
+      </h4>
       <p>
        P.L. 2018, ch. 170, § 4 provides: “Notwithstanding any general or special law to the contrary, this act shall not apply to a contract for construction relating to a project for which the owner’s contract was entered into prior to the effective date of this act [July 2, 2018].”
       </p>
@@ -18182,11 +18190,13 @@
       <p>
        P.L. 2014, ch. 430, § 1, and P.L. 2014, ch. 453, § 1 enacted identical amendments to this section.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t37c15s37-15-7-applicability">
        <b>
         Applicability.
        </b>
-      </p>
+      </h4>
       <p>
        P.L. 2008, ch. 100, art. 12, § 19 provides that the amendment to this section by that act takes effect July 1, 2008, and shall apply to all offenses committed on July 1, 2008 and thereafter.
       </p>
@@ -20703,11 +20713,13 @@
       <p>
        P.L. 1979, ch. 116, § 2; P.L. 1985, ch. 386, § 1.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t37c18s37-18-2-compilersnotes">
        <b>
         Compiler's Notes
        </b>
-      </p>
+      </h4>
       <p>
        In 2021, “and Providence Plantations” was deleted following “state of Rhode Island” in this section at the direction of the Law Revision Director to reflect the 2020 amendments to the state constitution that changed the state’s name.
       </p>
