--- a/transforms/ri/ocri/r70/gov.ri.code.title.39.html
+++ b/transforms/ri/ocri/r70/gov.ri.code.title.39.html
@@ -10,12 +10,12 @@
   <meta content="1504.84" name="CocoaVersion" />
   <link href="https://unicourt.github.io/cic-code-ga/transforms/ga/stylesheet/ga_code_stylesheet.css" rel="stylesheet" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
-  <meta content="Release 70 of the Official Code of Rhode Island Annotated released 2021.11.Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-23.This document is not subject to copyright and is in the public domain. " name="description" />
+  <meta content="Release 70 of the Official Code of Rhode Island Annotated released 2021.11.Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-24.This document is not subject to copyright and is in the public domain. " name="description" />
  </head>
  <body>
   <nav>
    <p class="transformation">
-    Release 70 of the Official Code of Rhode Island Annotated released 2021.11. Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-23. This document is not subject to copyright and is in the public domain.
+    Release 70 of the Official Code of Rhode Island Annotated released 2021.11. Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-24. This document is not subject to copyright and is in the public domain.
    </p>
    <h1 id="t39">
     <b>
@@ -24414,20 +24414,22 @@
      <h3 id="t39c12s39-12-44">
       39-12-44.  [Obsolete.]
      </h3>
-     <p>
-      <b>
-       Reenactments.
-      </b>
-     </p>
-     <p>
-      The 1984 Reenactment (P.L. 1984, ch. 81, § 1) deemed this section (G.L. 1956, §
-      <cite class="ocri">
-       <a href="#t39c12s39-12-44" target="_self">
-        39-12-44
-       </a>
-      </cite>
-      ; P.L. 1958, ch. 87, § 1) to be obsolete.
-     </p>
+     <div>
+      <h4 id="t39c12s39-12-44-reenactments">
+       <b>
+        Reenactments.
+       </b>
+      </h4>
+      <p>
+       The 1984 Reenactment (P.L. 1984, ch. 81, § 1) deemed this section (G.L. 1956, §
+       <cite class="ocri">
+        <a href="#t39c12s39-12-44" target="_self">
+         39-12-44
+        </a>
+       </cite>
+       ; P.L. 1958, ch. 87, § 1) to be obsolete.
+      </p>
+     </div>
     </div>
    </div>
    <div>
@@ -34244,11 +34246,13 @@
       <p>
        P.L. 1986, ch. 257, § 1; P.L. 2006, ch. 222, § 1; P.L. 2008, ch. 116, § 1; P.L. 2008, ch. 266, § 1.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t39c19s39-19-10-applicability">
        <b>
         Applicability.
        </b>
-      </p>
+      </h4>
       <p>
        P.L. 2006, chapter 222, § 2, provides that the amendment to this section by that act shall not apply to telephone, telecommunications or information service providers with respect to any such facilities affixed to the unit of a tenant prior to the effective date of that act.
       </p>
@@ -35070,11 +35074,13 @@
       <p>
        P.L. 1984, ch. 155, art. 6, § 1; P.L. 2016, ch. 516, § 1.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t39c21s39-21-1-legislativeintent">
        <b>
         Legislative Intent.
        </b>
-      </p>
+      </h4>
       <p>
        P.L. 1985, ch. 181, art. 60 provides: “It is the intention of the General Assembly to transfer to the Executive Department all of the powers and duties necessary to operate the E-911 Uniform Emergency Telephone System which are presently contained in Title 39, Chapter 21 of the General Laws. It is the intention that said transfer will take place once the system is operational and functional. Said transfer should occur by legislative action effective July 1, 1988, at which time the system should be operational. Once this transfer is accomplished, the E-911 Uniform Emergency Telephone System Authority should become advisory in nature.”
       </p>
@@ -35166,11 +35172,13 @@
        </cite>
        .
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t39c21s39-21-2-legislativeintent">
        <b>
         Legislative Intent.
        </b>
-      </p>
+      </h4>
       <p>
        As to the legislative findings and intent in the enactment of this chapter by P.L. 1989, ch. 126, art. 36, § 5, see section 1 of P.L. 1989, ch. 126, art. 36.
       </p>
@@ -42508,11 +42516,13 @@
        P.L. 2021, ch. 361, § 2, and
        P.L. 2021, ch. 363, § 2 enacted identical versions of this chapter.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t39c27.1s39-27.1-1-legislativefindings">
        <b>
         Legislative Findings.
        </b>
-      </p>
+      </h4>
       <p>
        P.L. 2021, ch. 361, § 1 and
        P.L. 2021, ch. 363, § 1 provide: “Legislative findings.
@@ -42893,11 +42903,13 @@
       <p>
        P.L. 2021, ch. 361, § 2, effective July 12, 2021; P.L. 2021, ch. 363, § 2, effective July 12, 2021.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t39c27.1s39-27.1-4-legislativefindings">
        <b>
         Legislative Findings.
        </b>
-      </p>
+      </h4>
       <p>
        P.L. 2021, ch. 361, § 1 and
        P.L. 2021, ch. 363, § 1 provide: “Legislative findings.
@@ -44336,11 +44348,13 @@
       <p>
        P.L. 2017, ch. 309, § 2; P.L. 2017, ch. 331, § 2.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t39c32s39-32-1-legislativefindings">
        <b>
         Legislative Findings.
        </b>
-      </p>
+      </h4>
       <p>
        P.L. 2017, ch. 309, § 1 and P.L. 2017, ch. 331, § 1 provide: “Because of the integral role that technology plays in economic development and the vitality of the State of Rhode Island and Providence Plantations and in the lives of its citizens, the general assembly has determined that a law addressing the
        deployment of wireless technology is of vital interest to the state. Rhode Island is one of the foremost states with broadband coverage and capability and must continue to lead in the advancement of new technology. Small wireless facilities are critical to delivering wireless access to advanced technology, broadband and 911 services to homes, businesses, and schools in the state. To ensure that the state and those who live and work here continue to benefit from these advanced services as soon as possible and to ensure that providers of wireless services have a fair and predictable process for the deployment of small wireless facilities, the general assembly enacts this ‘Rhode Island Small Cell Siting Act’, which specifies how local authorities may regulate the collocation of small wireless facilities and small wireless facility networks.”
