--- a/transforms/ri/ocri/r70/gov.ri.code.title.40.1.html
+++ b/transforms/ri/ocri/r70/gov.ri.code.title.40.1.html
@@ -10,12 +10,12 @@
   <meta content="1504.84" name="CocoaVersion" />
   <link href="https://unicourt.github.io/cic-code-ga/transforms/ga/stylesheet/ga_code_stylesheet.css" rel="stylesheet" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
-  <meta content="Release 70 of the Official Code of Rhode Island Annotated released 2021.11.Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-23.This document is not subject to copyright and is in the public domain. " name="description" />
+  <meta content="Release 70 of the Official Code of Rhode Island Annotated released 2021.11.Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-24.This document is not subject to copyright and is in the public domain. " name="description" />
  </head>
  <body>
   <nav>
    <p class="transformation">
-    Release 70 of the Official Code of Rhode Island Annotated released 2021.11. Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-23. This document is not subject to copyright and is in the public domain.
+    Release 70 of the Official Code of Rhode Island Annotated released 2021.11. Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-24. This document is not subject to copyright and is in the public domain.
    </p>
    <h1 id="t40.1">
     <b>
@@ -869,11 +869,13 @@
       <p>
        Chapter 50.1 of title 42, referred to in subsection (14) of this section, was repealed by P.L. 1999, ch. 116, § 2, effective June 25, 1999.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t40.1c01s40.1-1-13-applicability">
        <b>
         Applicability.
        </b>
-      </p>
+      </h4>
       <p>
        P.L. 2010, ch. 23, art. 8, § 10, provides that the amendment to this section by that act takes effect upon passage [June 12, 2010] and shall apply retroactively to July 1, 2009.
       </p>
@@ -2885,11 +2887,13 @@
       <p>
        P.L. 2010, ch. 23, art. 8, § 5.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t40.1c03s40.1-3-16-applicability">
        <b>
         Applicability.
        </b>
-      </p>
+      </h4>
       <p>
        P.L. 2010, ch. 23, art. 8, § 10, provides that this section takes effect upon passage [June 12, 2010] and shall apply retroactively to July 1, 2009.
       </p>
@@ -2925,32 +2929,36 @@
      <h3 id="t40.1c04s40.1-4-1">
       40.1-4-1 — 40.1-4-4.  [Renumbered.]
      </h3>
-     <p>
-      <b>
-       Transferred Sections.
-      </b>
-     </p>
-     <p>
-      P.L. 1995 ch. 370, art. 14, § 4 renumbered §§
-      <cite class="ocri">
-       <a href="#t40.1c04s40.1-4-1" target="_self">
-        40.1-4-1
-       </a>
-      </cite>
-      — 40.1-4-4 as §§
-      <cite class="ocri">
-       <a href="gov.ri.code.title.23.html#t23c1.10s23-1.10-1" target="_blank">
-        23-1.10-1
-       </a>
-      </cite>
-      —
-      <cite class="ocri">
-       <a href="gov.ri.code.title.23.html#t23c1.10s23-1.10-4" target="_blank">
-        23-1.10-4
-       </a>
-      </cite>
-      , effective July 1, 1995.
-     </p>
+     <div>
+      <h4 id="t40.1c04s40.1-4-1-transferredsections">
+       <b>
+        Transferred Sections.
+       </b>
+      </h4>
+      <p>
+       P.L. 1995 ch. 370, art. 14, § 4 renumbered §§
+       <cite class="ocri">
+        <a href="#t40.1c04s40.1-4-1" target="_self">
+         40.1-4-1
+        </a>
+       </cite>
+       — 40.1-4-4 as §§
+       <cite class="ocri">
+        <a href="gov.ri.code.title.23.html#t23c1.10s23-1.10-1" target="_blank">
+         23-1.10-1
+        </a>
+       </cite>
+       —
+       <cite class="ocri">
+        <a href="gov.ri.code.title.23.html#t23c1.10s23-1.10-4" target="_blank">
+         23-1.10-4
+        </a>
+       </cite>
+       , effective July 1, 1995.
+      </p>
+     </div>
+    </div>
+    <div>
      <h3 id="t40.1c04s40.1-4-5">
       40.1-4-5, 40.1-4-5.1.  [Repealed.]
      </h3>
@@ -2978,32 +2986,34 @@
      <h3 id="t40.1c04s40.1-4-6">
       40.1-4-6 — 40.1-4-19.  [Renumbered.]
      </h3>
-     <p>
-      <b>
-       Transferred Sections.
-      </b>
-     </p>
-     <p>
-      P.L. 1995, ch. 370, art. 14, § 4 renumbered §§
-      <cite class="ocri">
-       <a href="#t40.1c04s40.1-4-6" target="_self">
-        40.1-4-6
-       </a>
-      </cite>
-      — 40.1-4-19 as §§
-      <cite class="ocri">
-       <a href="gov.ri.code.title.23.html#t23c1.10s23-1.10-6" target="_blank">
-        23-1.10-6
-       </a>
-      </cite>
-      —
-      <cite class="ocri">
-       <a href="gov.ri.code.title.23.html#t23c1.10s23-1.10-19" target="_blank">
-        23-1.10-19
-       </a>
-      </cite>
-      , effective July 1, 1995.
-     </p>
+     <div>
+      <h4 id="t40.1c04s40.1-4-6-transferredsections">
+       <b>
+        Transferred Sections.
+       </b>
+      </h4>
+      <p>
+       P.L. 1995, ch. 370, art. 14, § 4 renumbered §§
+       <cite class="ocri">
+        <a href="#t40.1c04s40.1-4-6" target="_self">
+         40.1-4-6
+        </a>
+       </cite>
+       — 40.1-4-19 as §§
+       <cite class="ocri">
+        <a href="gov.ri.code.title.23.html#t23c1.10s23-1.10-6" target="_blank">
+         23-1.10-6
+        </a>
+       </cite>
+       —
+       <cite class="ocri">
+        <a href="gov.ri.code.title.23.html#t23c1.10s23-1.10-19" target="_blank">
+         23-1.10-19
+        </a>
+       </cite>
+       , effective July 1, 1995.
+      </p>
+     </div>
     </div>
    </div>
    <div>
