--- a/transforms/ri/ocri/r70/gov.ri.code.title.41.html
+++ b/transforms/ri/ocri/r70/gov.ri.code.title.41.html
@@ -10,12 +10,12 @@
   <meta content="1504.84" name="CocoaVersion" />
   <link href="https://unicourt.github.io/cic-code-ga/transforms/ga/stylesheet/ga_code_stylesheet.css" rel="stylesheet" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
-  <meta content="Release 70 of the Official Code of Rhode Island Annotated released 2021.11.Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-23.This document is not subject to copyright and is in the public domain. " name="description" />
+  <meta content="Release 70 of the Official Code of Rhode Island Annotated released 2021.11.Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-24.This document is not subject to copyright and is in the public domain. " name="description" />
  </head>
  <body>
   <nav>
    <p class="transformation">
-    Release 70 of the Official Code of Rhode Island Annotated released 2021.11. Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-23. This document is not subject to copyright and is in the public domain.
+    Release 70 of the Official Code of Rhode Island Annotated released 2021.11. Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-24. This document is not subject to copyright and is in the public domain.
    </p>
    <h1 id="t41">
     <b>
@@ -6258,11 +6258,13 @@
       <p>
        P.L. 2016, ch. 5, § 4, and P.L. 2016, ch. 6, § 4, provide: “Nothing in this act shall abrogate or diminish the powers of the state, through the division of state lottery, to conduct and control video lottery terminals pursuant to chapter 61.2 of title 42.”
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t41c07s41-7-3-contingenteffectivedates">
        <b>
         Contingent Effective Dates.
        </b>
-      </p>
+      </h4>
       <p>
        P.L. 2016, ch. 5, § 13, and P.L. 2016, ch. 6, § 13, provide: “This Section 13, and Sections 5, 6 and 12 of this act shall take effect upon passage of the act. All other sections of this act shall take effect immediately upon, but only if, the requirements of
        <cite class="ocri">
