--- a/transforms/ri/ocri/r70/gov.ri.code.title.46.html
+++ b/transforms/ri/ocri/r70/gov.ri.code.title.46.html
@@ -10,12 +10,12 @@
   <meta content="1504.84" name="CocoaVersion" />
   <link href="https://unicourt.github.io/cic-code-ga/transforms/ga/stylesheet/ga_code_stylesheet.css" rel="stylesheet" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
-  <meta content="Release 70 of the Official Code of Rhode Island Annotated released 2021.11.Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-23.This document is not subject to copyright and is in the public domain. " name="description" />
+  <meta content="Release 70 of the Official Code of Rhode Island Annotated released 2021.11.Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-24.This document is not subject to copyright and is in the public domain. " name="description" />
  </head>
  <body>
   <nav>
    <p class="transformation">
-    Release 70 of the Official Code of Rhode Island Annotated released 2021.11. Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-23. This document is not subject to copyright and is in the public domain.
+    Release 70 of the Official Code of Rhode Island Annotated released 2021.11. Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-24. This document is not subject to copyright and is in the public domain.
    </p>
    <h1 id="t46">
     <b>
@@ -4684,11 +4684,13 @@
        P.L. 2012, ch. 370, § 1, and
        P.L. 2012, ch. 389, § 1 enacted identical versions of this section.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t46c06s46-6-10.4-applicability">
        <b>
         Applicability.
        </b>
-      </p>
+      </h4>
       <p>
        P.L. 2012, ch. 370, § 3, provides that the enactment of this section by that act takes effect upon passage [June 21, 2012] and applies to all boat registrations, including renewals, effective March 1, 2013.
       </p>
@@ -9456,20 +9458,22 @@
      <h3 id="t46c12s46-12-3.1">
       46-12-3.1.  [Transferred.]
      </h3>
-     <p>
-      <b>
-       Transferred Sections.
-      </b>
-     </p>
-     <p>
-      This section was redesignated as §
-      <cite class="ocri">
-       <a href="#t46c12s46-12-4" target="_self">
-        46-12-4
-       </a>
-      </cite>
-      by P.L. 1983, ch. 149, § 1.
-     </p>
+     <div>
+      <h4 id="t46c12s46-12-3.1-transferredsections">
+       <b>
+        Transferred Sections.
+       </b>
+      </h4>
+      <p>
+       This section was redesignated as §
+       <cite class="ocri">
+        <a href="#t46c12s46-12-4" target="_self">
+         46-12-4
+        </a>
+       </cite>
+       by P.L. 1983, ch. 149, § 1.
+      </p>
+     </div>
     </div>
     <div>
      <h3 id="t46c12s46-12-4">
@@ -11022,26 +11026,28 @@
      <h3 id="t46c12s46-12-31">
       46-12-31. — 46-12-36.  [Transferred.]
      </h3>
-     <p>
-      <b>
-       Transferred Sections.
-      </b>
-     </p>
-     <p>
-      These sections were transferred to §§
-      <cite class="ocri">
-       <a href="#t46c12s46-12-22" target="_self">
-        46-12-22
-       </a>
-      </cite>
-      —
-      <cite class="ocri">
-       <a href="#t46c12s46-12-27" target="_self">
-        46-12-27
-       </a>
-      </cite>
-      by P.L. 1983, ch. 149, § 1.
-     </p>
+     <div>
+      <h4 id="t46c12s46-12-31-transferredsections">
+       <b>
+        Transferred Sections.
+       </b>
+      </h4>
+      <p>
+       These sections were transferred to §§
+       <cite class="ocri">
+        <a href="#t46c12s46-12-22" target="_self">
+         46-12-22
+        </a>
+       </cite>
+       —
+       <cite class="ocri">
+        <a href="#t46c12s46-12-27" target="_self">
+         46-12-27
+        </a>
+       </cite>
+       by P.L. 1983, ch. 149, § 1.
+      </p>
+     </div>
     </div>
     <div>
      <h3 id="t46c12s46-12-37">
@@ -12685,11 +12691,11 @@
          </cite>
          or §
          <cite class="ocri">
-          <a href="#t46c12.2s46-12.2-12" target="_self">
-           46-12.2-12
+          <a href="#t46c12.2s46-12.2-12.1" target="_self">
+           46-12.2-12.1
           </a>
          </cite>
-         .1; or (C) without limitation as to the amount, if issued as a financing lease or other appropriation obligation;
+         ; or (C) without limitation as to the amount, if issued as a financing lease or other appropriation obligation;
         </li>
         <li id="t46c12.2s46-12.2-10ol11-ii">
          Plan, design, acquire, construct, operate, maintain, and otherwise undertake any project subject to the rules, regulations, procedures, and guidelines of the department, if applicable, in effect from time to time and the requirements of any other applicable law;
@@ -12768,11 +12774,11 @@
        </cite>
        and §
        <cite class="ocri">
-        <a href="#t46c12.2s46-12.2-12" target="_self">
-         46-12.2-12
+        <a href="#t46c12.2s46-12.2-12.1" target="_self">
+         46-12.2-12.1
         </a>
        </cite>
-       .1, the applicable bond act, or by agreement between the agency and a local governmental unit, all local governmental obligations issued in accordance with this section shall be general obligations of the local governmental unit issuing the obligations for which its full faith and credit are pledged and for the payment of which all taxable property in the local governmental unit shall be subject to ad valorem taxation without limit as to rate or amount except as otherwise provided by law.
+       , the applicable bond act, or by agreement between the agency and a local governmental unit, all local governmental obligations issued in accordance with this section shall be general obligations of the local governmental unit issuing the obligations for which its full faith and credit are pledged and for the payment of which all taxable property in the local governmental unit shall be subject to ad valorem taxation without limit as to rate or amount except as otherwise provided by law.
       </li>
      </ol>
      <div>
@@ -16672,11 +16678,13 @@
       <p>
        P.L. 2017, ch. 80, § 1, and P.L. 2017, ch. 92, § 1 enacted identical amendments to this section.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t46c12.9s46-12.9-11-retroactiveeffectivedates">
        <b>
         Retroactive Effective Dates.
        </b>
-      </p>
+      </h4>
       <p>
        P.L. 2008, ch. 9, art. 20, § 2 provides that the amendments to this section by that act shall be retroactive to January 1, 2008.
       </p>
@@ -17931,11 +17939,13 @@
        </cite>
        ; P.L. 1980, ch. 14, § 2; P.L. 1990, ch. 220, § 1; P.L. 2000, ch. 247, § 1; P.L. 2007, ch. 340, § 46.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t46c13s46-13-18-transferredsections">
        <b>
         Transferred Sections.
        </b>
-      </p>
+      </h4>
       <p>
        The former section (P.L. 1977, ch. 158, § 2), concerning variances and exemptions, was redesignated §
        <cite class="ocri">
@@ -24331,11 +24341,13 @@
       <p>
        P.L. 1992, ch. 134, § 1; P.L. 1993, ch. 243, § 1; P.L. 2007, ch. 340, § 52; repealed by P.L. 2021, ch. 93, § 1, effective July 1, 2021; repealed by P.L. 2021, ch. 94, § 1, effective July 1, 2021.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t46c15.5s46-15.5-6-compilersnotes">
        <b>
         Compiler's Notes
        </b>
-      </p>
+      </h4>
       <p>
        Former §
        <cite class="ocri">
@@ -32332,11 +32344,13 @@
       <p>
        P.L. 2015, ch. 103, § 4, and P.L. 2015, ch. 114, § 4 enacted identical amendments to this section.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t46c23s46-23-6.3-applicability">
        <b>
         Applicability.
        </b>
-      </p>
+      </h4>
       <p>
        P.L. 2010, ch. 209, § 5, provides that the amendment to this section by that act takes effect upon passage [June 25, 2010], and shall apply to approvals and permits in effect on November 9, 2009 and those issued between November 9, 2009 and June 30, 2011, and shall not revive any expired approval or permit.
       </p>
@@ -33884,11 +33898,13 @@
        P.L. 2021, ch. 377, § 2, and
        P.L. 2021, ch. 378, § 2 enacted identical versions of this chapter.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t46c23.3s46-23.3-1-legislativefindings">
        <b>
         Legislative Findings.
        </b>
-      </p>
+      </h4>
       <p>
        P.L. 2021, ch. 377, § 1 and
        P.L. 2021, ch. 378, § 1 provide: “Legislative findings and purpose.
