--- a/transforms/ri/ocri/r70/gov.ri.code.title.02.html
+++ b/transforms/ri/ocri/r70/gov.ri.code.title.02.html
@@ -10,12 +10,12 @@
   <meta content="1504.84" name="CocoaVersion" />
   <link href="https://unicourt.github.io/cic-code-ga/transforms/ga/stylesheet/ga_code_stylesheet.css" rel="stylesheet" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
-  <meta content="Release 70 of the Official Code of Rhode Island Annotated released 2021.11.Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-23.This document is not subject to copyright and is in the public domain. " name="description" />
+  <meta content="Release 70 of the Official Code of Rhode Island Annotated released 2021.11.Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-24.This document is not subject to copyright and is in the public domain. " name="description" />
  </head>
  <body>
   <nav>
    <p class="transformation">
-    Release 70 of the Official Code of Rhode Island Annotated released 2021.11. Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-23. This document is not subject to copyright and is in the public domain.
+    Release 70 of the Official Code of Rhode Island Annotated released 2021.11. Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-24. This document is not subject to copyright and is in the public domain.
    </p>
    <h1 id="t02">
     <b>
@@ -8005,11 +8005,13 @@
       <p>
        This compact shall continue in force and remain binding on each state ratifying it until the legislature or the governor of such state takes action to withdraw therefrom. Such action shall not be effective until six months after notice thereof has been sent by the chief executive of the state desiring to withdraw to the chief executives of all states then parties to the compact.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t02c13s2-13-1-ratification">
        <b>
         Ratification.
        </b>
-      </p>
+      </h4>
       <p>
        U.S. Act June 25, 1949, ch. 246, 63 Stat. 271.
       </p>
