--- a/transforms/ri/ocri/r70/gov.ri.code.title.03.html
+++ b/transforms/ri/ocri/r70/gov.ri.code.title.03.html
@@ -10,12 +10,12 @@
   <meta content="1504.84" name="CocoaVersion" />
   <link href="https://unicourt.github.io/cic-code-ga/transforms/ga/stylesheet/ga_code_stylesheet.css" rel="stylesheet" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
-  <meta content="Release 70 of the Official Code of Rhode Island Annotated released 2021.11.Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-23.This document is not subject to copyright and is in the public domain. " name="description" />
+  <meta content="Release 70 of the Official Code of Rhode Island Annotated released 2021.11.Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-24.This document is not subject to copyright and is in the public domain. " name="description" />
  </head>
  <body>
   <nav>
    <p class="transformation">
-    Release 70 of the Official Code of Rhode Island Annotated released 2021.11. Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-23. This document is not subject to copyright and is in the public domain.
+    Release 70 of the Official Code of Rhode Island Annotated released 2021.11. Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-24. This document is not subject to copyright and is in the public domain.
    </p>
    <h1 id="t03">
     <b>
@@ -2795,11 +2795,13 @@
       <p>
        P.L. 2020, ch. 20, § 1, and P.L. 2020, ch. 44, § 1 enacted identical amendments to this section.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t03c05s3-5-16-severability">
        <b>
         Severability.
        </b>
-      </p>
+      </h4>
       <p>
        P.L. 2015, ch. 27, § 2 provides:
        “If any provision of this act, or the application thereof to the town of Barrington or to any person or circumstances, is deemed invalid for any reason, the remainder of this act, or the application of such provision to said town or other persons or circumstances, shall
@@ -5398,11 +5400,13 @@
        P.L. 2021, ch. 313, § 2;
        P.L. 2021, ch. 314, § 2 ) as passed by the 2021 General Assembly. Since the acts are not in conflict with each other, the section is set out as amended by all four acts.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t03c06s3-6-1.2-sunsetprovision">
        <b>
         Sunset Provision.
        </b>
-      </p>
+      </h4>
       <p>
        P.L. 2021, ch. 129, § 3, provides: “This act shall take effect upon passage [July 2, 2021] and shall sunset on March 1, 2022.”
       </p>
@@ -8171,11 +8175,13 @@
        § 1, and P.L. 2021, ch. 130, § 1 enacted
        identical amendments to this section.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t03c07s3-7-7-sunsetprovision">
        <b>
         Sunset Provision.
        </b>
-      </p>
+      </h4>
       <p>
        P.L. 2021, ch. 129, § 3,
        provides: “This act shall take effect upon passage [July 2, 2021] and shall sunset on March 1, 2022.”
@@ -12453,11 +12459,13 @@
       <p>
        P.L. 2017, ch. 182, § 2, and P.L. 2017, ch. 364, § 2 enacted identical amendments to this section.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t03c07s3-7-27-applicability">
        <b>
         Applicability.
        </b>
-      </p>
+      </h4>
       <p>
        P.L. 2017, ch. 182, § 3, provides that the amendment to this section by that act takes effect August 1, 2017, and shall apply to any new or renewed license issued or renewed on or after August 1, 2017.
       </p>
@@ -12517,11 +12525,13 @@
       <p>
        P.L. 2017, ch. 182, § 1, and P.L. 2017, ch. 364, § 1 both enacted versions of this section. The section is set out above as enacted by P.L. 2017, ch. 364, which was passed by the General Assembly on September 19, 2017. The version enacted by P.L. 2017, ch. 182, which was passed by the General Assembly on June 30, 2017, did not contain the language “or class AS liquor licenses” in the first sentence.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t03c07s3-7-29-applicability">
        <b>
         Applicability.
        </b>
-      </p>
+      </h4>
       <p>
        P.L. 2017, ch. 182, § 3, provides that this section takes effect August 1, 2017, and shall apply to any new or renewed license issued or renewed on or after August 1, 2017.
       </p>
@@ -15722,13 +15732,7 @@
        </b>
       </h4>
       <p>
-       Indecent intoxication, violation of ordinance, penalty, §
-       <cite class="ocri">
-        <a href="gov.ri.code.title.45.html#t45c06s45-6-3" target="_blank">
-         45-6-3
-        </a>
-       </cite>
-       .
+       Indecent intoxication, violation of ordinance, penalty, § 45-6-3.
       </p>
       <p>
        Licensing of pharmacies, §
