--- a/transforms/ri/ocri/r70/gov.ri.code.title.04.html
+++ b/transforms/ri/ocri/r70/gov.ri.code.title.04.html
@@ -10,12 +10,12 @@
   <meta content="1504.84" name="CocoaVersion" />
   <link href="https://unicourt.github.io/cic-code-ga/transforms/ga/stylesheet/ga_code_stylesheet.css" rel="stylesheet" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
-  <meta content="Release 70 of the Official Code of Rhode Island Annotated released 2021.11.Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-23.This document is not subject to copyright and is in the public domain. " name="description" />
+  <meta content="Release 70 of the Official Code of Rhode Island Annotated released 2021.11.Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-24.This document is not subject to copyright and is in the public domain. " name="description" />
  </head>
  <body>
   <nav>
    <p class="transformation">
-    Release 70 of the Official Code of Rhode Island Annotated released 2021.11. Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-23. This document is not subject to copyright and is in the public domain.
+    Release 70 of the Official Code of Rhode Island Annotated released 2021.11. Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-24. This document is not subject to copyright and is in the public domain.
    </p>
    <h1 id="t04">
     <b>
@@ -2756,11 +2756,13 @@
       <p>
        P.L. 2012, ch. 275, § 1; P.L. 2012, ch. 285, § 1; P.L. 2018, ch. 348, § 1.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t04c1.1s4-1.1-1.01-delayedeffectivedates">
        <b>
         Delayed Effective Dates.
        </b>
-      </p>
+      </h4>
       <p>
        P.L. 2018, ch. 348, § 2, provides that the amendment to this section by that act takes effect on July 1, 2026.
       </p>
@@ -2808,11 +2810,13 @@
       <p>
        P.L. 2012, ch. 275, § 1; P.L. 2012, ch. 285, § 1; P.L. 2018, ch. 348, § 1.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t04c1.1s4-1.1-2.01-delayedeffectivedates">
        <b>
         Delayed Effective Dates.
        </b>
-      </p>
+      </h4>
       <p>
        P.L. 2018, ch. 348, § 2, provides that the amendment to this section by that act takes effect on July 1, 2026.
       </p>
@@ -2848,11 +2852,13 @@
       <p>
        P.L. 2012, ch. 275, § 1; P.L. 2012, ch. 285, § 1; P.L. 2018, ch. 348, § 1.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t04c1.1s4-1.1-3.01-delayedeffectivedates">
        <b>
         Delayed Effective Dates.
        </b>
-      </p>
+      </h4>
       <p>
        P.L. 2018, ch. 348, § 2, provides that the amendment to this section by that act takes effect on July 1, 2026.
       </p>
@@ -2952,11 +2958,13 @@
       <p>
        P.L. 2012, ch. 275, § 1; P.L. 2012, ch. 285, § 1; P.L. 2018, ch. 348, § 1; P.L. 2019, ch. 308, art. 2, § 2.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t04c1.1s4-1.1-4.01-delayedeffectivedates">
        <b>
         Delayed Effective Dates.
        </b>
-      </p>
+      </h4>
       <p>
        P.L. 2018, ch. 348, § 2, provides that the amendment to this section by that act takes effect on July 1, 2026.
       </p>
@@ -3017,11 +3025,13 @@
       <p>
        P.L. 2012, ch. 275, § 1; P.L. 2012, ch. 285, § 1; P.L. 2018, ch. 348, § 1.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t04c1.1s4-1.1-5.01-delayedeffectivedates">
        <b>
         Delayed Effective Dates.
        </b>
-      </p>
+      </h4>
       <p>
        P.L. 2018, ch. 348, § 2, provides that the amendment to this section by that act takes effect on July 1, 2026.
       </p>
