--- a/transforms/ri/ocri/r70/gov.ri.code.title.13.html
+++ b/transforms/ri/ocri/r70/gov.ri.code.title.13.html
@@ -10,12 +10,12 @@
   <meta content="1504.84" name="CocoaVersion" />
   <link href="https://unicourt.github.io/cic-code-ga/transforms/ga/stylesheet/ga_code_stylesheet.css" rel="stylesheet" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
-  <meta content="Release 70 of the Official Code of Rhode Island Annotated released 2021.11.Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-23.This document is not subject to copyright and is in the public domain. " name="description" />
+  <meta content="Release 70 of the Official Code of Rhode Island Annotated released 2021.11.Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-24.This document is not subject to copyright and is in the public domain. " name="description" />
  </head>
  <body>
   <nav>
    <p class="transformation">
-    Release 70 of the Official Code of Rhode Island Annotated released 2021.11. Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-23. This document is not subject to copyright and is in the public domain.
+    Release 70 of the Official Code of Rhode Island Annotated released 2021.11. Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-24. This document is not subject to copyright and is in the public domain.
    </p>
    <h1 id="t13">
     <b>
@@ -543,11 +543,13 @@
        </cite>
        .
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t13c05s13-5-4-reenactments">
        <b>
         Reenactments.
        </b>
-      </p>
+      </h4>
       <p>
        The 2002 Reenactment added the subsection and subdivision designations.
       </p>
@@ -777,11 +779,13 @@
        </cite>
        .
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t13c06s13-6-1-reenactments">
        <b>
         Reenactments.
        </b>
-      </p>
+      </h4>
       <p>
        The 2002 Reenactment rewrote the section heading.
       </p>
@@ -1007,11 +1011,13 @@
       <p>
        P.L. 1985, ch. 418, § 1.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t13c06s13-6-2.1-reenactments">
        <b>
         Reenactments.
        </b>
-      </p>
+      </h4>
       <p>
        The 2002 Reenactment rewrote the section heading and added the subsection designations.
       </p>
@@ -1037,11 +1043,13 @@
       <p>
        P.L. 1985, ch. 418, § 1.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t13c06s13-6-2.2-reenactments">
        <b>
         Reenactments.
        </b>
-      </p>
+      </h4>
       <p>
        The 2002 Reenactment rewrote the section heading.
       </p>
@@ -1379,11 +1387,13 @@
        </cite>
        .
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t13c07s13-7-1-reenactments">
        <b>
         Reenactments.
        </b>
-      </p>
+      </h4>
       <p>
        The 2002 Reenactment rewrote the section heading.
       </p>
@@ -1419,11 +1429,13 @@
        </cite>
        .
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t13c07s13-7-2-reenactments">
        <b>
         Reenactments.
        </b>
-      </p>
+      </h4>
       <p>
        The 2002 Reenactment rewrote the section heading.
       </p>
@@ -1457,11 +1469,13 @@
       <p>
        P.L. 1975, ch. 95, § 2; P.L. 1976, ch. 290, § 4.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t13c07s13-7-3-reenactments">
        <b>
         Reenactments.
        </b>
-      </p>
+      </h4>
       <p>
        The 2002 Reenactment rewrote the section heading and added the subsection designations.
       </p>
@@ -1574,11 +1588,13 @@
        </cite>
        ; Reorg. Plan No. 1, 1970; P.L. 1972, ch. 163, § 8.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t13c07s13-7-7-reenactments">
        <b>
         Reenactments.
        </b>
-      </p>
+      </h4>
       <p>
        The 2002 Reenactment added the subsection designations.
       </p>
@@ -1632,11 +1648,13 @@
       <p>
        P.L. 1995, ch. 295, § 2.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t13c07s13-7-8.1-reenactments">
        <b>
         Reenactments.
        </b>
-      </p>
+      </h4>
       <p>
        The 2002 Reenactment substituted “director of corrections” for “director of the adult correctional institution” in the first sentence.
       </p>
@@ -2145,11 +2163,13 @@
        </cite>
        ; P.L. 1969, ch. 28, § 2; P.L. 1989, ch. 419, § 1; P.L. 1993, ch. 262, § 2; P.L. 2012, ch. 421, § 1; P.L. 2012, ch. 481, § 1.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t13c08s13-8-2-reenactments">
        <b>
         Reenactments.
        </b>
-      </p>
+      </h4>
       <p>
        The 2002 Reenactment added the paragraph designations in subdivision (1).
       </p>
@@ -2208,11 +2228,13 @@
        </cite>
        ; P.L. 1978, ch. 96, § 1; P.L. 1993, ch. 262, § 3.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t13c08s13-8-3-reenactments">
        <b>
         Reenactments.
        </b>
-      </p>
+      </h4>
       <p>
        The 2002 Reenactment added the subsection designations.
       </p>
@@ -2246,11 +2268,13 @@
       <p>
        P.L. 2000, ch. 367, § 1.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t13c08s13-8-3.1-reenactments">
        <b>
         Reenactments.
        </b>
-      </p>
+      </h4>
       <p>
        The 2002 Reenactment added the subsection designations.
       </p>
@@ -2406,11 +2430,13 @@
        </cite>
        ; Reorg. Plan No. 1, 1970; P.L. 1972, ch. 163, § 9; P.L. 1983, ch. 215, § 1; P.L. 1989, ch. 419, § 1; P.L. 1999, ch. 472, § 1; P.L. 2002, ch. 319, § 1; P.L. 2009, ch. 118, § 1; P.L. 2009, ch. 140, § 1.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t13c08s13-8-6-reenactments">
        <b>
         Reenactments.
        </b>
-      </p>
+      </h4>
       <p>
        The 2002 Reenactment added the paragraph designations in subdivision (a)(7).
       </p>
@@ -3111,11 +3137,13 @@
        </cite>
        ; P.L. 1960, ch. 115, § 1; P.L. 1970, ch. 120, § 1; P.L. 1975, ch. 190, § 1; P.L. 1981, ch. 36, § 1; P.L. 1989, ch. 419, § 1; P.L. 1995, ch. 129, § 1; P.L. 2015, ch. 284, § 1; P.L. 2015, ch. 285, § 1; P.L. 2021, ch. 162, art. 13, § 3, effective July 6, 2021.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t13c08s13-8-13-reenactments">
        <b>
         Reenactments.
        </b>
-      </p>
+      </h4>
       <p>
        The 2002 Reenactment in subsection (a) added the subdivision designations, and added paragraph designations in subdivisions (3) and (4).
       </p>
@@ -3400,11 +3428,13 @@
       <p>
        P.L. 1982, ch. 375, § 10; P.L. 2000, ch. 109, § 22; P.L. 2008, ch. 9, art. 7, § 1; P.L. 2017, ch. 346, § 1; P.L. 2017, ch. 352, § 1.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t13c08s13-8-14.1-reenactments">
        <b>
         Reenactments.
        </b>
-      </p>
+      </h4>
       <p>
        The 2002 Reenactment added the subsection designations.
       </p>
@@ -3590,11 +3620,13 @@
        </cite>
        ; P.L. 1983, ch. 215, § 1; P.L. 2002, ch. 319, § 1.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t13c08s13-8-16-reenactments">
        <b>
         Reenactments.
        </b>
-      </p>
+      </h4>
       <p>
        The 2002 Reenactment added the subsection designations.
       </p>
@@ -3743,11 +3775,13 @@
        </cite>
        ; Reorg. Plan No. 1, 1970; P.L. 1972, ch. 163, § 9; P.L. 1976, ch. 290, § 5.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t13c08s13-8-17-reenactments">
        <b>
         Reenactments.
        </b>
-      </p>
+      </h4>
       <p>
        The 2002 Reenactment added the subsection designations.
       </p>
@@ -4111,11 +4145,13 @@
        </cite>
        ; P.L. 1976, ch. 290, § 5; P.L. 2003, ch. 209, § 2; P.L. 2003, ch. 369, § 2; P.L. 2013, ch. 101, § 1; P.L. 2013, ch. 111, § 1; P.L. 2017, ch. 346, § 1; P.L. 2017, ch. 352, § 1.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t13c08s13-8-19-reenactments">
        <b>
         Reenactments.
        </b>
-      </p>
+      </h4>
       <p>
        The 2002 Reenactment added the subsection designations.
       </p>
@@ -4492,11 +4528,13 @@
        </cite>
        ; Reorg. Plan No. 1, 1970; P.L. 1972, ch. 163, § 9; P.L. 1976, ch. 290, § 5; P.L. 1989, ch. 419, § 1; P.L. 2011, ch. 151, art. 20, § 2.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t13c08s13-8-23-reenactments">
        <b>
         Reenactments.
        </b>
-      </p>
+      </h4>
       <p>
        The 2002 Reenactment substituted ‘The director of corrections” for “The assistant director of adult services” in subdivisions (1) and (2).
       </p>
@@ -4797,11 +4835,13 @@
       <p>
        P.L. 1998, ch. 375, § 1; P.L. 2006, ch. 206, § 5; P.L. 2006, ch. 207, § 5.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t13c08s13-8-32-reenactments">
        <b>
         Reenactments.
        </b>
-      </p>
+      </h4>
       <p>
        The 2002 Reenactment redesignated the subsections.
       </p>
@@ -4972,11 +5012,13 @@
       <p>
        P.L. 1999, ch. 297, § 1; P.L. 2021, ch. 162, art. 13, § 4, effective July 6, 2021.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t13c8.1s13-8.1-1-reenactments">
        <b>
         Reenactments.
        </b>
-      </p>
+      </h4>
       <p>
        The 2002 Reenactment rewrote the section heading.
       </p>
@@ -5218,11 +5260,13 @@
       <p>
        P.L. 1999, ch. 297, § 1; P.L. 2011, ch. 151, art. 20, § 1; P.L. 2011, ch. 176, § 1; P.L. 2011, ch. 300, § 1; P.L. 2017, ch. 346, § 2; P.L. 2017, ch. 352, § 2; P.L. 2021, ch. 162, art. 13, § 4, effective July 6, 2021.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t13c8.1s13-8.1-4-reenactments">
        <b>
         Reenactments.
        </b>
-      </p>
+      </h4>
       <p>
        The 2002 Reenactment redesignated the subsections and subdivisions and substituted “director of corrections” for “director of the department of corrections” in subsection (d) and subdivision (
        l
@@ -6836,22 +6880,16 @@
      </p>
      <div>
       <h3 id="t13c11s13-11-2aI">
-       ARTICLE I
+       ARTICLE I Purpose and Policy
       </h3>
-      <p>
-       Purpose and Policy
-      </p>
       <p>
        The party states, desiring by common action to fully utilize and improve their institutional facilities and provide adequate programs for the confinement, treatment and rehabilitation of various types of offenders, declare that it is the policy of each of the party states to provide facilities and programs on a basis of cooperation with one another, serving the best interests of offenders and of society and effecting economies in capital expenditures and operational costs. The purpose of this compact is to provide for the mutual development and execution of programs of cooperation for the confinement, treatment and rehabilitation of offenders with the most economical use of human and material resources.
       </p>
      </div>
      <div>
       <h3 id="t13c11s13-11-2aII">
-       ARTICLE II
+       ARTICLE II Definitions
       </h3>
-      <p>
-       Definitions
-      </p>
       <p>
        As used in this compact, unless the context clearly requires otherwise:
       </p>
@@ -6875,11 +6913,8 @@
      </div>
      <div>
       <h3 id="t13c11s13-11-2aIII">
-       ARTICLE III
+       ARTICLE III Contracts
       </h3>
-      <p>
-       Contracts
-      </p>
       <ol type="a">
        <li id="t13c11s13-11-2aIIIol1a">
         Each party state may make one or more contracts with any one or more of the other party states for the confinement of inmates on behalf of a sending state in institutions situated within receiving states. Any such contract shall provide for:
@@ -6911,11 +6946,8 @@
      </div>
      <div>
       <h3 id="t13c11s13-11-2aIV">
-       ARTICLE IV
+       ARTICLE IV Procedures and Rights
       </h3>
-      <p>
-       Procedures and Rights
-      </p>
       <ol type="a">
        <li id="t13c11s13-11-2aIVol1a">
         Whenever the duly constituted authorities in a state party to this compact, and which has entered into a contract pursuant to article III, decides that confinement in, or transfer of an inmate to, an institution within the territory of another party state is necessary or desirable in order to provide adequate quarters and care or an appropriate program of rehabilitation or treatment, the officials may direct that the confinement be within an institution within the territory of the other party state, the receiving state to act in that regard solely as agent for the sending state.
@@ -6948,11 +6980,8 @@
      </div>
      <div>
       <h3 id="t13c11s13-11-2aV">
-       ARTICLE V
+       ARTICLE V Acts Not Reviewable in Receiving State: Extradition
       </h3>
-      <p>
-       Acts Not Reviewable in Receiving State: Extradition
-      </p>
       <ol type="a">
        <li id="t13c11s13-11-2aVol1a">
         Any decision of the sending state in respect of any matter over which it retains jurisdiction pursuant to this compact shall be conclusive upon and not reviewable within the receiving state, but if at the time the sending state seeks to remove an inmate from an institution in the receiving state there is pending against the inmate within such state any criminal charge or if the inmate is formally accused of having committed within such state a criminal offense, the inmate shall not be returned without the consent of the receiving state until discharged from prosecution or other form of proceeding, imprisonment or detention for an offense. The duly accredited officers of the sending state shall be permitted to transport inmates pursuant to this compact through any and all states party to this compact without interference.
@@ -6964,55 +6993,40 @@
      </div>
      <div>
       <h3 id="t13c11s13-11-2aVI">
-       ARTICLE VI
+       ARTICLE VI Federal Aid
       </h3>
-      <p>
-       Federal Aid
-      </p>
       <p>
        Any state party to this compact may accept federal aid for use in connection with any institution or program, the use of which is or may be affected by this compact or any contract pursuant to it and any inmate in a receiving state pursuant to this compact may participate in any federally aided program or activity for which the sending and receiving states have made contractual provision provided that if the program or activity is not part of the customary correctional regimen the express consent of the appropriate official of the sending state shall be required.
       </p>
      </div>
      <div>
       <h3 id="t13c11s13-11-2aVII">
-       ARTICLE VII
+       ARTICLE VII Entry into Force
       </h3>
-      <p>
-       Entry into Force
-      </p>
       <p>
        This compact shall enter into force and become effective and binding upon the states so acting when it has been enacted into law by any two (2) states from among the states of New England. Thereafter, this compact shall enter into force and become effective and binding as to any other of said states upon similar action by the state.
       </p>
      </div>
      <div>
       <h3 id="t13c11s13-11-2aVIII">
-       ARTICLE VIII
+       ARTICLE VIII Withdrawal and Termination
       </h3>
-      <p>
-       Withdrawal and Termination
-      </p>
       <p>
        This compact shall continue in force and remain binding upon a party state until it shall have enacted a statute repealing the compact and providing for the sending of formal written notice of withdrawal from the compact to the appropriate officials of all other party states. An actual withdrawal shall not take effect until one year after the notices provided in the statute have been sent. The withdrawal shall not relieve the withdrawing state from its obligations assumed under the compact prior to the effective date of withdrawal. Before the effective date of withdrawal, a withdrawing state shall remove to its territory, at its own expense, any inmates whom it may have confined pursuant to the provisions of this compact.
       </p>
      </div>
      <div>
       <h3 id="t13c11s13-11-2aIX">
-       ARTICLE IX
+       ARTICLE IX Other Arrangements Unaffected
       </h3>
-      <p>
-       Other Arrangements Unaffected
-      </p>
       <p>
        Nothing contained in this compact shall be construed to abrogate or impair any agreement or other arrangement which a party state may have with a non-party state for the confinement, rehabilitation or treatment of inmates nor to repeal any other laws of a party state authorizing the making of cooperative institutional arrangements.
       </p>
      </div>
      <div>
       <h3 id="t13c11s13-11-2aX">
-       ARTICLE X
+       ARTICLE X Construction and Severability
       </h3>
-      <p>
-       Construction and Severability
-      </p>
       <p>
        The provisions of this compact shall be liberally construed and shall be severable. If any phrase, clause, sentence or provision of this compact is declared to be contrary to the constitution of any participating state or of the United States or the applicability of it to any government, agency, person or circumstance is held invalid, the validity of the remainder of this compact and the applicability of it to any government, agency, person or circumstance shall not be affected. If this compact shall be held contrary to the constitution of any state participating in it, the compact shall remain in full force and effect as to the remaining states and in full force and effect as to the state affected as to all severable matters.
       </p>
