--- a/transforms/ri/ocri/r70/gov.ri.code.title.18.html
+++ b/transforms/ri/ocri/r70/gov.ri.code.title.18.html
@@ -10,12 +10,12 @@
   <meta content="1504.84" name="CocoaVersion" />
   <link href="https://unicourt.github.io/cic-code-ga/transforms/ga/stylesheet/ga_code_stylesheet.css" rel="stylesheet" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
-  <meta content="Release 70 of the Official Code of Rhode Island Annotated released 2021.11.Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-23.This document is not subject to copyright and is in the public domain. " name="description" />
+  <meta content="Release 70 of the Official Code of Rhode Island Annotated released 2021.11.Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-24.This document is not subject to copyright and is in the public domain. " name="description" />
  </head>
  <body>
   <nav>
    <p class="transformation">
-    Release 70 of the Official Code of Rhode Island Annotated released 2021.11. Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-23. This document is not subject to copyright and is in the public domain.
+    Release 70 of the Official Code of Rhode Island Annotated released 2021.11. Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-24. This document is not subject to copyright and is in the public domain.
    </p>
    <h1 id="t18">
     <b>
@@ -3745,11 +3745,13 @@
       <p>
        P.L. 2013, ch. 310, § 1, and P.L. 2013, ch. 418, § 1 enacted identical amendments to this section.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t18c04s18-4-31-applicability">
        <b>
         Applicability.
        </b>
-      </p>
+      </h4>
       <p>
        P.L. 2013, ch. 310, § 2, provides that the amendment to this section by that act takes effect on upon passage [July 15, 2013] and shall apply to all trusts, whenever created.
       </p>
