--- a/transforms/ri/ocri/r70/gov.ri.code.title.40.html
+++ b/transforms/ri/ocri/r70/gov.ri.code.title.40.html
@@ -10,12 +10,12 @@
   <meta content="1504.84" name="CocoaVersion" />
   <link href="https://unicourt.github.io/cic-code-ga/transforms/ga/stylesheet/ga_code_stylesheet.css" rel="stylesheet" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
-  <meta content="Release 70 of the Official Code of Rhode Island Annotated released 2021.11.Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-23.This document is not subject to copyright and is in the public domain. " name="description" />
+  <meta content="Release 70 of the Official Code of Rhode Island Annotated released 2021.11.Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-24.This document is not subject to copyright and is in the public domain. " name="description" />
  </head>
  <body>
   <nav>
    <p class="transformation">
-    Release 70 of the Official Code of Rhode Island Annotated released 2021.11. Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-23. This document is not subject to copyright and is in the public domain.
+    Release 70 of the Official Code of Rhode Island Annotated released 2021.11. Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-24. This document is not subject to copyright and is in the public domain.
    </p>
    <h1 id="t40">
     <b>
@@ -8007,11 +8007,13 @@
       <p>
        P.L. 1987, ch. 546, § 1; P.L. 1992, ch. 163, § 1; P.L. 1996, ch. 129, § 13; P.L. 1996, ch. 131, § 13; P.L. 1996, ch. 132, § 13; P.L. 1996, ch. 133, § 13; P.L. 1997, ch. 30, art. 34, § 4; P.L. 1998, ch. 31, art. 11, § 3; P.L. 2004, ch. 595, art. 27, § 1; P.L. 2005, ch. 117, art. 10, § 1; P.L. 2006, ch. 246, art. 14, § 1; P.L. 2006, ch. 601, § 1; P.L. 2006, ch. 612, § 1; P.L. 2007, ch. 73, art. 15, § 1; P.L. 2008, ch. 100, art. 27, § 1; P.L. 2015, ch. 141, art. 17, § 1; P.L. 2018, ch. 47, art. 15, § 7; P.L. 2019, ch. 88, art. 13, § 4; P.L. 2021, ch. 162, art. 13, § 7, effective July 6, 2021.
       </p>
-      <p>
+     </div>
+     <div>
+      <h4 id="t40c6.2s40-6.2-1.1-applicability">
        <b>
         Applicability.
        </b>
-      </p>
+      </h4>
       <p>
        P.L. 2004, ch. 595, art. 27, § 2, provides that the amendment to this section by that act takes effect upon passage [July 30, 2004] and applies to payments to child care providers for child care services rendered on and after June 6, 2004. Any rules or regulations necessary or advisable to implement the provisions of the amendment shall be effective immediately as an emergency rule upon the department’s filing thereof with the secretary of state as it is found that the current fiscal crisis in this state has caused an imminent peril to public health, safety and welfare, and the department is exempted from the requirements of
        §§ 42-35-3(b) and
@@ -22112,11 +22114,8 @@
      </p>
      <div>
       <h3 id="t40c15s40-15-1aI">
-       ARTICLE I
+       ARTICLE I  —  PURPOSE AND POLICY
       </h3>
-      <p>
-       —  PURPOSE AND POLICY
-      </p>
       <p>
        It is the purpose and policy of the party states to cooperate with each other in the interstate placement of children to the end that:
       </p>
@@ -22140,11 +22139,8 @@
      </div>
      <div>
       <h3 id="t40c15s40-15-1aII">
-       ARTICLE II
+       ARTICLE II  —  DEFINITIONS
       </h3>
-      <p>
-       —  DEFINITIONS
-      </p>
       <ol type="a">
        <li id="t40c15s40-15-1aIIol1a">
         “Child” means a person who, by reason of minority, is legally subject to parental guardianship or similar control.
@@ -22162,11 +22158,8 @@
      </div>
      <div>
       <h3 id="t40c15s40-15-1aIII">
-       ARTICLE III
+       ARTICLE III  —  CONDITIONS FOR PLACEMENT
       </h3>
-      <p>
-       —  CONDITIONS FOR PLACEMENT
-      </p>
       <ol type="a">
        <li id="t40c15s40-15-1aIIIol1a">
         No sending agency shall send, bring, or cause to be sent or brought into any other party state any child for placement in foster care or as a preliminary to a possible adoption unless the sending agency shall comply with each and every requirement set forth in this article and with the applicable laws of the receiving state governing the placement of children therein.
@@ -22198,22 +22191,16 @@
      </div>
      <div>
       <h3 id="t40c15s40-15-1aIV">
-       ARTICLE IV
+       ARTICLE IV  —  PENALTY FOR ILLEGAL PLACEMENT
       </h3>
-      <p>
-       —  PENALTY FOR ILLEGAL PLACEMENT
-      </p>
       <p>
        The sending, bringing, or causing to be sent or brought into any receiving state of a child in violation of the terms of this compact shall constitute a violation of the laws respecting the placement of children of both the state in which the sending agency is located or from which it sends or brings the child and of the receiving state. Such violation may be punished or subjected to penalty in either jurisdiction in accordance with its laws. In addition to liability for any such punishment or penalty, any such violation shall constitute full and sufficient grounds for the suspension or revocation of any license, permit, or other legal authorization held by the sending agency which empowers or allows it to place, or care for children.
       </p>
      </div>
      <div>
       <h3 id="t40c15s40-15-1aV">
-       ARTICLE V
+       ARTICLE V  —  RETENTION OF JURISDICTION
       </h3>
-      <p>
-       —  RETENTION OF JURISDICTION
-      </p>
       <ol type="a">
        <li id="t40c15s40-15-1aVol1a">
         The sending agency shall retain jurisdiction over the child sufficient to determine all matters in relation to the custody, supervision, care, treatment and disposition of the child which it would have had if the child had remained in the sending agency’s state, until the child is adopted, reaches majority, becomes self-supporting or is discharged with the concurrence of the appropriate authority in the receiving state. Such jurisdiction shall also include the power to effect or cause the return of the child or its transfer to another location and custody pursuant to law. The sending agency shall continue to have financial responsibility for support and maintenance of the child during the period of the placement. Nothing contained herein shall defeat a claim of jurisdiction by a receiving state sufficient to deal with an act of delinquency or crime committed therein.
@@ -22228,12 +22215,9 @@
      </div>
      <div>
       <h3 id="t40c15s40-15-1aVI">
-       ARTICLE VI
-      </h3>
-      <p>
-       —  INSTITUTIONAL CARE OF 
+       ARTICLE VI  —  INSTITUTIONAL CARE OF 
 DELINQUENT CHILDREN
-      </p>
+      </h3>
       <p>
        A child adjudicated delinquent may be placed in an institution in another party jurisdiction pursuant to this compact but no such placement shall be made unless the child is given a court hearing on notice to the parent or guardian with opportunity to be heard, prior to his or her being sent to such other party jurisdiction for institutional care and the court finds that:
       </p>
@@ -22248,22 +22232,16 @@ DELINQUENT CHILDREN
      </div>
      <div>
       <h3 id="t40c15s40-15-1aVII">
-       ARTICLE VII
+       ARTICLE VII  —  COMPACT ADMINISTRATOR
       </h3>
-      <p>
-       —  COMPACT ADMINISTRATOR
-      </p>
       <p>
        The executive head of each jurisdiction party to this compact shall designate an officer who shall be general coordinator of activities under this compact in his or her jurisdiction and who, acting jointly with like officers of other party jurisdictions, shall have power to promulgate rules and regulations to carry out more effectively the terms and provisions of this compact.
       </p>
      </div>
      <div>
       <h3 id="t40c15s40-15-1aVIII">
-       ARTICLE VIII
+       ARTICLE VIII  —  LIMITATIONS
       </h3>
-      <p>
-       —  LIMITATIONS
-      </p>
       <p>
        This compact shall not apply to:
       </p>
@@ -22278,22 +22256,16 @@ DELINQUENT CHILDREN
      </div>
      <div>
       <h3 id="t40c15s40-15-1aIX">
-       ARTICLE IX
+       ARTICLE IX  —  ENACTMENT AND WITHDRAWAL
       </h3>
-      <p>
-       —  ENACTMENT AND WITHDRAWAL
-      </p>
       <p>
        This compact shall be open to joinder by any state, territory or possession of the United States, the District of Columbia, the Commonwealth of Puerto Rico, and, with the consent of congress, the government of Canada or any province thereof. It shall become effective with respect to any such jurisdiction when such jurisdiction has enacted the same into law. Withdrawal from this compact shall be by the enactment of a statute repealing the same, but shall not take effect until two (2) years after the effective date of such statute and until written notice of the withdrawal has been given by the withdrawing state to the governor of each other party jurisdiction. Withdrawal of a party state shall not affect the rights, duties and obligations under this compact of any sending agency therein with respect to a placement made prior to the effective date of withdrawal.
       </p>
      </div>
      <div>
       <h3 id="t40c15s40-15-1aX">
-       ARTICLE X
+       ARTICLE X  —  CONSTRUCTION AND SEVERABILITY
       </h3>
-      <p>
-       —  CONSTRUCTION AND SEVERABILITY
-      </p>
       <p>
        The provisions of this compact shall be liberally construed to effectuate the purposes thereof. The provisions of this compact shall be severable and if any phrase, clause, sentence or provision of this compact is declared to be contrary to the constitution of any party state or of the United States or the applicability thereof to any government, agency, person or circumstance is held invalid, the validity of the remainder of this compact and the applicability thereof to any government, agency, person or circumstance shall not be affected thereby. If this compact shall be held contrary to the constitution of any state party thereto, the compact shall remain in full force and effect as to the remaining states and in full force and effect as to the state affected as to all severable matters.
       </p>
