--- a/transforms/ri/ocri/r70/gov.ri.code.title.43.html
+++ b/transforms/ri/ocri/r70/gov.ri.code.title.43.html
@@ -10,12 +10,12 @@
   <meta content="1504.84" name="CocoaVersion" />
   <link href="https://unicourt.github.io/cic-code-ga/transforms/ga/stylesheet/ga_code_stylesheet.css" rel="stylesheet" />
   <meta content="width=device-width, initial-scale=1" name="viewport" />
-  <meta content="Release 70 of the Official Code of Rhode Island Annotated released 2021.11.Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-23.This document is not subject to copyright and is in the public domain. " name="description" />
+  <meta content="Release 70 of the Official Code of Rhode Island Annotated released 2021.11.Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-24.This document is not subject to copyright and is in the public domain. " name="description" />
  </head>
  <body>
   <nav>
    <p class="transformation">
-    Release 70 of the Official Code of Rhode Island Annotated released 2021.11. Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-23. This document is not subject to copyright and is in the public domain.
+    Release 70 of the Official Code of Rhode Island Annotated released 2021.11. Transformed and posted by Public.Resource.Org using rtf-parser.py version 1.0 on 2022-08-24. This document is not subject to copyright and is in the public domain.
    </p>
    <h1 id="t43">
     <b>
@@ -4020,11 +4020,13 @@
         Compiler’s Notes.
        </b>
       </h4>
-      <p>
+     </div>
+     <div>
+      <h4 id="t43c04s43-4-18-subsequentreenactments">
        <b>
         Subsequent Reenactments.
        </b>
-      </p>
+      </h4>
       <p>
        Legislative reenactments adopted after the enactment of this section include P.L. 1996, ch. 404, § 1; P.L. 1997, ch. 326, § 1; and P.L. 1998, ch. 441, § 1.
       </p>
